c/e, remove superfluous cat

--- a/ᏧᎵᏍᏓᎾᎵ.mw
+++ b/ᏧᎵᏍᏓᎾᎵ.mw
@@ -59,13 +59,16 @@
 ᏧᎵᏍᏓᎾᎵ, ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎤᎦᎾᏍᏛ, ᏩᏂᎦᎳ ᎤᏇᏓᎵ, ᎠᎴ ᎤᎵᏍᎨᏛ ᏥᏄᏍᏗ ᎠᎵᏍᏓᏴᏗ ᎠᏣᏗ ᏂᎦᏅᎯᏒ ᎯᎠ ᎡᎶᎯ. ᏱᏂᎬᏛᎾ, ᎯᎠ ᎠᎦᎸᏥ, ᎠᏓᏥ, ᎠᎴ Spanish ᎠᎵᏍᏓᏴᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏚᏂᏴ ᎯᎠ ᎠᏣᏗ ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗ ᎾᏍᎩ ᎣᏏ ᎠᏰᎸᏗ, ᎠᎴ ᎨᏒᎢ ᎾᏍᎩ ᎤᎪᏗᏗ ᎾᏍᎩᎾᎢ ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎤᏲᏨᎯ.  [[Ictaluridae|Ictalurids]] ᎠᎴ ᏄᏍᏛ ᎠᎩᏍᏗ ᎭᏫᎾᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]] (ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[Deep South|ᎠᏍᏛᎩ ᎤᎦᎾᏭ]] ᎬᏙᏗ [[Mississippi]] ᎠᎴᏂᏙᎲ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᏄᏍᏛ ᎤᏪᏅᏒ ᏧᎵᏍᏓᎾᎵ ᏂᎬᏂᏏᏍᎬ)<ref>{{Cite paper | author= J.E. Morris| title= Pond Culture of Channel Catfish in the North Central Region | publisher= North Central Regional Aquaculture Center| date= October 1993| url= http://www.extension.iastate.edu/Publications/NCR444.pdf| accessdate= 2006-06-28}} 
 </ref>, ᎠᎴ ᏗᏂᎳᏫᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ Ictalurus ᎤᎭ ᏭᏪᏙᎢ ᎤᎧᏁᎳ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎾᎾᎯ European ᎠᎹᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏚᎩ ᎬᏗ ᎣᏤᎵ ᎾᎬᏁᎲ ᎠᏓᎯᏍᏗ ᎠᎴ ᎠᎵᏍᏓᏴᏗ resource, ᏱᏂᎬᏛᎾ, ᎯᎠ European ᎤᏂᎲ ᏧᎬᏩᎶᏗ ᏴᏩᏁᎬ catfishes ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ achieved ᎯᎠ ᎢᎦᎢ ᎾᏍᎩ ᎯᎠ fishes ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎾᏰᎯᏯ ᎠᎹᏱ, ᎠᎴ ᎤᎭ ᎾᏍᎩ ᎤᏩᏒ ᎤᏁᏉᏨᎯ ᎯᎠ ecological ᎤᎳᏂᎬᎬ ᎾᎿ ᎾᏰᎯᏯ European gantlai, ᎾᎯᏳᎢ [[Clariidae|Clariids]] ᎠᎴ [[Pangasiidae|Pangasiids]] ᎠᎴ ᏧᏓᏗᎩᏓ cultured ᎭᏫᎾᏗᏢ [[Africa]] ᎠᎴ Asia. ᎾᎿᎢ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎡᏆ ᎠᎴ ᎠᏛᏏᏒ ᎤᏬᏚ ᎠᏣᏗ ᏗᏓᏁᏟᏴᎡᏗ, ᎬᏙᏗ ᎢᏯᏍᎪᎯᏧᏈ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏧᎵᏍᏓᎾᎵ, ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[Corydoras]], ᎠᎴᏂᏙᎲ ᎤᏂᎸᏉᏗ ᏑᏓᎴᎩ ᎤᎪᏗᏗ [[aquarium|aquaria]].
 
-
-
 ᎤᏙᎯᏳ ᎡᏆ wels ᏧᎵᏍᏓᎾᎵ (''Silurus glanis'') ᏥᏄᏍᏛᎩ ᎦᏂᏴᏛ ᎾᎥᎢ Kevin Maddocks ᎾᎿ [[August 6|ᎦᎶᏂ 6]], [[1999]], ᎪᏪᎳᏅᎯ ᎾᎾᎢ 202 ᎢᏧᏓᎨᏓ (91.62 kg). Tim Pruitt Illinois ᎦᏂᏴᏛ ᎯᎠ ᎤᏔᏂᎢᏍᏗ [[blue catfish|ᏌᎪᏂᎨ ᏧᎵᏍᏓᎾᎵ]] (''Ictalurus furcatus'') ᎭᏫᎾᏗᏢ ᎯᎠ [[Mississippi River|Mississippi ᎤᏪᏴ]] ᎾᎿ [[May 22|ᎠᎾᏍᎬᏘ 22]], [[2005]] Ꮎ ᎤᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎾᎾᎢ 124 ᎢᏧᏓᎨᏓ (56.25 kg). ᎯᎠ ᎤᏔᏂᎢᏍᏗ [[flathead catfish|flathead ᏧᎵᏍᏓᎾᎵ]] (''Pylodictis olivaris'') ᎢᏳᏊ ᎦᏂᏴᏛ ᏥᏄᏍᏛᎩ ᎭᏫᎾᏗᏢ [[Independence, Kansas|ᎬᏙᏗ, Kansas]], ᎦᏛᏍᎬᎢ ᎭᏫᎾᏗᏢ ᎾᎾᎢ 123 ᎢᏧᏓᎨᏓ 9 ᏄᏓᎨᏒ (56  kg). ᏱᏂᎬᏛᎾ, ᎾᏍᎩ ᎯᎠ ᎪᏪᎸ ᎤᏔᏂᏗ ᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎤᏠᏱ ᎾᎬᏁᎲ [[Pangasius_gigas|ᏂᎬᎢ Mekong ᏧᎵᏍᏓᎾᎵ]] ᎦᏂᏴᏛ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎢᏗᏢ [[Thailand]] ᎭᏫᎾᏗᏢ [[May 1|ᎠᎾᏍᎬᏘ 1]], [[2005]] ᎠᎴ ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎯᎠ ᏗᏂᎴᏱᏗᏍᎩ ᎾᎥᏂᎨᏍᏗ 2 ᎢᏯᏅᏓ ᎣᏂᏯᎨᏍᏙᏗ, Ꮎ ᎤᏔᏅᎩ 646 ᎢᏧᏓᎨᏓ (293 kg). ᎪᎯ ᎨᏒᎢ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᏂᎬᎢ Mekong ᏧᎵᏍᏓᎾᎵ ᎦᏂᏴᏛ, ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᎣᏂ ᏧᏩᎫᏛ Thai ᎠᏰᎵ ᎤᎾᏒᎧᎵ ᎤᏂᎩᏍᏔᏅ ᎤᏍᏆᏂᎪᏛ ᎪᏪᎸ ᎭᏫᎾᏗᏢ 1981 <ref name=Mekong>{{cite web| url = http://news.nationalgeographic.com/news/2005/06/0629_050629_giantcatfish.html|title=Grizzly Bear-Size Catfish Caught in Thailand |accessdate=2006-07-14|publisher=National Geographic News}}</ref>. ᎯᎠ ᏂᎬᎢ Mekong ᏧᎵᏍᏓᎾᎵ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏔᎴᏒ ᎠᎹᏱ ᎤᎦᏎᏍᏔᏅᎩ ᎣᏂ ᏧᏩᎫᏛ ᎤᏅᏌ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏙᎷᏩᏘᏍᎬ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᏰᎵᏊ Ꮎ ᎤᏅᏌ ᏰᎵᏇ ᎠᏛᏍᎬ ᎢᏧᎳᎭ ᎡᏆᎯᎨᏍᏙᏗ.
 
 ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ, [[June 25|ᏕᎭᎷᏱ 25]] ᎨᏒᎢ [[National Catfish Day|ᎬᎾᏕᎾ ᏧᎵᏍᏓᎾᎵ ᎢᎦ]].
 
-ᏐᎢ ᏧᎵᏍᏓᎾᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏠᏯᏍᏛ:
+*ᎴᎬᎾᎻ: ''Animalia''
+*ᏆᎢᎳᎻ: ''Chordata''
+*ᏗᎦᎪᏗ: ''Actinopterygii''
+*ᎣᎸᏙ: ''Siluriformes''
+
+==ᏐᎢ ᏧᎵᏍᏓᎾᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᏠᏯᏍᏛ==
 * [[Iridescent Shark|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᏯᏍᏔ]]
 * [[Channel catfish|ᎤᎶᎯᏍᏗ ᏧᎵᏍᏓᎾᎵ]]
 * [[Redtail catfish|Redtail ᏧᎵᏍᏓᎾᎵ]]
@@ -73,33 +76,10 @@
 ==ᏫᏓᏎᎸᎢ==
 <references/>
 
-[[Category:Edible fish]]
-[[Category:Siluriformes]]
-[[Category:Fish of Africa]]
-[[Category:Fish of Asia]]
-[[Category:Fish of Europe]]
-[[Category:Fish of South America]]
-[[Category:Fish of North America]]
-[[Category:Fish of Central America]]
-
-
-
-ᎴᎬᎾᎻ: ''Animalia''
-
-ᏆᎢᎳᎻ: ''Chordata''
-
-ᏗᎦᎪᏗ: ''Actinopterygii''
-
-ᎣᎸᏙ: ''Siluriformes''
-
-
-
+[[Category:ᎠᏣᏗ]]
 
 {{stub}}
 
-[[category:animalia]]
-
-[[category:ᎠᏣᏗ]]
 
 [[ar:قرموط]]
 [[ca:Siluriforme]]
