+ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ, +ᏚᎾᏓᏟᏌᎲ

--- a/ᎾᏆᏍᏛᏉᎦᏥᏍᎦᏂ.mw
+++ b/ᎾᏆᏍᏛᏉᎦᏥᏍᎦᏂ.mw
@@ -18,6 +18,10 @@
 ᎠᎴᏍᎩᏍᏕᎸᏗᏱᏥᏌ<br>
 ᏫᎬᎷᏥ, ᏫᎬᎷᏥ<br>
 
-([http://upload.wikimedia.org/wikipedia/commons/f/f5/Woodworth.ogg ᏗᎧᏃᎩᏛ])
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+*[http://upload.wikimedia.org/wikipedia/commons/f/f5/Woodworth.ogg ᏗᎧᏃᎩᏛ]
+
+[[Category:ᏧᎾᏁᏄᏗ ᏗᏁᎸᏙᏗ]]
+[[Category:ᏗᎧᏃᎩᏛ]]
 
 [[en:Just as I Am (hymn)]]
