--- a/ᏌᎵ.mw
+++ b/ᏌᎵ.mw
@@ -1,4 +1,25 @@
 [[File:Screen shot 2010-09-13 at 9.06.46 PM.png]]
 
+'''ᏌᎵ''' ᎤᏓᎳᏅ ᎠᎦᏍᏗ.
 
-'''ᏌᎵ'''
+[[Category:Plantae]]
+
+[[ar:كاكي]]
+[[ca:Caqui]]
+[[et:Hurmaa]]
+[[el:Λωτός]]
+[[en:Persimmon]]
+[[eo:Persimono]]
+[[fa:خرمالو]]
+[[fr:Kaki]]
+[[ko:감 (식물)]]
+[[is:Döðluplóma]]
+[[he:אפרסמון]]
+[[ms:Pisang kaki]]
+[[nl:Amerikaanse persimmon]]
+[[pt:Caqui]]
+[[ja:カキノキ]]
+[[sr:Персимон]]
+[[th:พลับ]]
+[[vi:Hồng (quả)]]
+[[zh:柿]]
