--- a/ᏎᎵᎾ.mw
+++ b/ᏎᎵᎾ.mw
@@ -1,5 +1,7 @@
 '''ᏎᎴᏀ''' ('''Selena Quintanilla-Pérez''': ''Selena'', ᎫᏬᏂ 16, 1971 – ᎠᎾᏱᎵᏒ 31, 1995).
 
+[[Category:ᎠᏂᏴᏫ]]
+
 [[af:Selena]]
 [[ak:Selena]]
 [[als:Selena]]
