--- a/ᏎᎷ_ᎤᏂᏥ_ᎠᏯᏟᏗ.mw
+++ b/ᏎᎷ_ᎤᏂᏥ_ᎠᏯᏟᏗ.mw
@@ -11,7 +11,7 @@
 (ᏎᎷ ᎤᏂᏥ ᎤᎾᏛᏒ Ꮲ 3-3 ½ ᎢᏯᎳᏏᏗ ᎢᎦᏘ ᎾᎾᎵᏍᏗᏍᎪᎢ. ᎠᎨᏳᏣ ᎤᏥᏃ ᏓᏂᏙᎦ
 ᏂᏓᏄᏖᏍᎬ ᏎᎷ ᎤᏂᏥ, ᏔᎷᏦ ᏓᏂᏢᏍᎦ.)
 
-[[File:Screen shot 2010-09-13 at 3.30.44 PM.png]]
+[[File:Screen shot 2010-09-13 at 3.30.44 PM.png|thumb|left|''Coix lacryma-jobi'']]
 
 ᏴᎩ ᎠᏍᏗᏃ ᏙᎩᏅᏔᏅ ᏗᏯᏟᏗ ᏙᎩᏃᏢᏅᎢ.
 ᎠᎨᏳᏣ ᎤᏥᏃ ᏚᏃᏝ ᏙᏱᏗᏢ ᏓᏂᏍᏗᏆᏍᎬ ᏎᎷ ᎤᏂᏥ. ᏔᎷᏦ ᏕᎦᏝ ᏎᎷ ᎤᏂᏥ. ᏌᏊᎭ ᏎᎷ
@@ -23,3 +23,25 @@
 ᎤᎾᏚᎵᏍᎪ ᏗᎦᏥᏲᏢᎾᏁᏗ ᏧᎾᏯᏟᏗ.
 ᎣᏍᏓ ᏂᏚᏅᏃ ᎠᏂᎨᏯ ᏱᏚᎾᏯᏝ.
 ᎯᎸᏍᎩ ᏧᏓᎴᏅᏓ ᎢᏳᎾᏕᏘᏴᏓ ᎢᏗᎩᏓᏃ ᎠᏂᎨᏳᏣ ᏚᎾᏯᏝ ᏎᎷ ᎤᏂᏥ ᎤᎾᏤᏣᏍᏗᏃ.
+
+[[Category:Plantae]]
+
+[[ar:دمع أيوب]]
+[[ca:Llàgrimes de Job]]
+[[cs:Slzovka obecná]]
+[[de:Hiobsträne]]
+[[en:Job's Tears]]
+[[es:Coix lacryma-jobi]]
+[[fr:Coix lacryma-jobi]]
+[[ko:율무]]
+[[id:Jali]]
+[[it:Coix lacryma-jobi]]
+[[pam:Balantakan]]
+[[ja:ジュズダマ]]
+[[qu:Kuymi]]
+[[su:Hanjeli]]
+[[sv:Jobs tårar]]
+[[th:ลูกเดือย]]
+[[to:Hana]]
+[[vi:Bo bo]]
+[[zh:薏苡]]
