--- a/ᏎᎷ_ᎤᏄᎶᏔᏅ_ᎠᏁᎵᏗ.mw
+++ b/ᏎᎷ_ᎤᏄᎶᏔᏅ_ᎠᏁᎵᏗ.mw
@@ -1,7 +1,7 @@
 “ᎡᏥ, Ꮭ ᎪᎱᏍᏗ ᏯᎩᎭ ᏱᎬᏆᏛᏅᏗ,” ᎧᏯᎯᎶᏍᎬ ᏑᏓᎵ ᏳᏕᏘᏴᏓ ᏎᎵᏓ. “ᎪᎱᏍᏗ
 ᎠᎩᏩᏛᏗ ᏯᏆᏛᏁᏗ!”
 ᎤᏥ ᏚᎧᏲᏔᏅ ᏧᏬᏰᏂ ᎤᏞᏌᏛ ᎬᏗ, ᎾᏊᏃ ᎤᏘᏅᏒ ᏎᎵᏓ ᏙᏱ ᎤᎦᎾᏩ ᎤᏬᏗᎨ
-ᏠᎨᏒ. ᏎᎷ ᎦᎳ ᏗᎦᏕᏓ ᏗᏍᏆᎾᎪᏔᏅᏃ ᎨᏒ ᎿᏊᏃ ᎠᏥᎹᎬ ᎪᎩ ᏅᏓ ᎧᎸᎢ.
+ᏠᎨᏒ. [[ᏎᎷ]] ᎦᎳ ᏗᎦᏕᏓ ᏗᏍᏆᎾᎪᏔᏅᏃ ᎨᏒ ᎿᏊᏃ ᎠᏥᎹᎬ ᎪᎩ ᏅᏓ ᎧᎸᎢ.
 ᏄᏁᏨᎾᏊ ᎤᏥ ᎤᎴᏅᎲ ᎦᏟᏏᏍᎬ ᏧᎧᏲᏓ ᏎᎷ ᏧᏄᎶᏔᏅ, ᎤᎴᏅᎲᏃ ᎤᏞᏌᏛ
 ᏕᎦᏢᏍᎬᎢ. ᎠᎪᎠᏂᏴᎲ ᏎᎵᏓ ᎠᎦᏘᎾᎡᏃ ᎤᏍᏗ ᎤᏪᏴᏗᏜ ᏫᏚᎾᏦᏝᏅ ᏫᏚᏃᏢ. ᎤᏥ
 ᎤᎴᏅᎲ ᏍᏓᏯ ᏕᎦᏄᏖᏲᎲ ᏎᎷ ᏧᏄᎶᏔᏅ ᎪᏢᏍᎬ ᎤᏍᏗ ᎤᏍᎧ. ᏏᏊ ᏚᏁᏖᏲᎸ ᏎᎷ
@@ -19,3 +19,5 @@
 ᎤᏂᏍᏆᏙᎿ ᏎᎵᏓ ᎤᎾᎡᎢ ᎤᏤᎵᏓ ᎠᏁᏟᏗ ᏎᎩᏂ ᏚᏬᎡᎢ. ᎤᎩᏨᏓ, ᏏᏊ ᏔᎵ ᎢᎦ
 ᏚᏬᏢᏅ ᏧᎵᎢ ᏎᎩᏂ. ᎠᏎᏍᎩᏂ ᏎᎩᏂ ᏂᎪᎸ ᎤᏤᎵᏛ ᎨᏎᏍᏗ, ᎠᎬᏱ ᎤᏬᏢᎾ ᎨᏒ,
 ᎢᏳᏰᏟᏗ, ᎿᏊᎴ ᎤᏥ ᎤᏍᏕᎸᏓ ᎪᏢᏍᎬᎢ.
+
+[[Category:ᏗᎾᏟᎶᏍᏗᏍᎩ]]
