--- a/ᏗᎵᏍᏆᎸᏓ.mw
+++ b/ᏗᎵᏍᏆᎸᏓ.mw
@@ -1,7 +1,8 @@
-[[File:Screen shot 2010-09-14 at 8.30.17 AM.png]]
-
+[[File:Screen shot 2010-09-14 at 8.30.17 AM.png|thumb|300px]]
 '''Grand Canyon''' ᏗᎵᏍᏆᎸᏓ ᎭᏫᏂ ᎤᎨᏓᎵᏴ. ᎢᎸᏍᎩ ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎤᏟᏱᎵᏙᎸ
 ᎠᏙᏢᏍᎬ ᏧᏟᏯᎦᏝ ᏅᏯ ᎤᎿ ᎤᎨᏓᎵᏴᎢ. ᎠᏎᏍᎩᏂ Ꮎ ᎧᎶᏩᏓ ᎤᏪᏴ ᎤᏟᏍᏛ ᎡᎬ ᎠᎹ ᎠᏴᏍᏗᏍᎬ
 ᏚᏟᏯᎦᏝ ᏩᏂᎨ ᏅᏯ, ᎠᏔᎴᏍᎬ yᎨᏓᎵᏴ ᏌᏊᏊ ᎢᏳᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ ᎤᏟᎢᎵᏙᎴ. Ꮎ ᎤᏪᏴ ᏐᎢᏃ
 ᎡᎳᏗᏜ ᎡᎬ ᎠᎹ Ꮟ ᏥᎩ ᎠᎵᏔᎴᏍᎦ ᎤᎨᏓᎵᏴ ᎪᎯᏴ ᏥᎩ. ᏚᏪᏴ Ꮟ ᏥᎩ ᏓᏲᏍᏗ ᏅᏯ ᎦᏓᏃ
 ᎤᏬᏢᏗ ᎤᎨᏓᎵᏴ, ᏚᏩᏝᎥᏃ ᏂᎬ ᎡᎶᎯ.
+
+[[Category:ᎡᎶᎯ]]
