--- a/ᏙᎯᏓ_ᎦᏓᏗ.mw
+++ b/ᏙᎯᏓ_ᎦᏓᏗ.mw
@@ -12,3 +12,5 @@
 ᏄᏍᏛ ᏙᎯᏓ ᏃᎴ ᎤᎵᎮᎵᏍᏗ ᏓᏟᎶᏍᏗᎭ. ᎦᎵᏉᎩᏃ ᏓᏎᎯᎲ ᏃᏈᏏ ᎦᎵᏉᎩ
 ᏧᏂᏴᏫ ᏓᏟᎶᏍᏗᎭ. ᎧᏃᎮᏓ ᎨᏒ ᏍᎩᎾ ᏙᎯᏓ ᎦᏓᏗ ᏧᏂᎲᏍᏔᏁ ᏅᏃ
 ᏚᎾᏠᎯᎸᏍᏔᏅ ᎠᎭᏂ ᎬᏂᎷᎩ.
+
+[[Category:ᎠᎹᏰᎵ]]
