+ᎤᎾᏓᏟᏌᎲ, +ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ

--- a/ᏣᎳᎩ_ᎠᏰᎵ.mw
+++ b/ᏣᎳᎩ_ᎠᏰᎵ.mw
@@ -1,6 +1,4 @@
-[[File:Screen shot 2010-09-13 at 9.55.37 PM.png]]
-
-
+[[File:Screen shot 2010-09-13 at 9.55.37 PM.png|thumb]]
 
 :'''ᏣᎳᎩ ᎠᏰᏟ'''
 
@@ -13,3 +11,8 @@
 ᏕᎪᏍᏓᏴ ᏂᎠᎾ ᏓᏟᎶᏍᏗ: ᎦᎵᏉᎩ ᏧᏂᏴᏫ. ᎦᎵᏉᎩ ᏏᏉᏯ ᏧᏬᏪᎳᏅ
 ᎠᏁᎵᏔᏅ ᏣᎳᎩ ᎠᏰᏟ. ᎠᏓᏯ ᏧᏩᎾᎦᏝᏅ ᏃᎴ ᏚᎵᏍᏚᏒ ᎠᏥᎳ ᎦᎸᏬᏗ
 ᏂᏓᏳᎶᏒ ᎠᏂᏣᎳᎩ ᎤᏃᏛ ᏓᏟᎶᏍᏗᎭ.
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+*[http://www.cherokee.org/ ᏣᎳᎩ ᎠᏰᏟ]
+
+[[Category:ᏣᎳᎩ]]
