--- a/ᏣᎳᎩ_ᎠᏰᏟ,_ᎠᏴᏫᏯ_ᎠᏂᏴᏫᏯᏍᏛ.mw
+++ b/ᏣᎳᎩ_ᎠᏰᏟ,_ᎠᏴᏫᏯ_ᎠᏂᏴᏫᏯᏍᏛ.mw
@@ -1,5 +1,4 @@
 
-
 [[File:Screen shot 2010-09-13 at 9.58.35 PM.png]]
 
 
@@ -13,3 +12,5 @@
 ᏚᎵᏍᏗ ᏐᏁᎳ, ᏐᏁᎳᏚ ᎢᏍᎪᎯᏧᏫ ᏁᎳᏍᎪ ᏐᏁᎳ ᏥᎨᏒ ᏌᏊ ᎬᎿᎨᎢ ᏃᏈᏏ
 ᏄᏅᏁᎴᎢ ᎦᎸᎾᏗ ᏅᏃᎯ ᏚᎾᏠᏱᎸ ᏗᎨᏥᎢᎸᏍᏔᏅᎢ ᎦᏚᎬᎢ. ᎠᎭᏂ ᎣᎦᎳᎰᎹ
 ᏂᏧᎶᏒ, ᏍᏗᎩᏓ ᏄᏓᎴ ᏄᏍᏗ ᏣᎳᎩ ᎤᏪᏘ ᏧᏂᎾᎠ.
+
+[[Category:ᏣᎳᎩ]]
