--- a/ᏣᎳᎩ_ᎫᎾᏕᎶᏆᏍᏗ_ᏚᏓᏥᏍᎬᎢ.mw
+++ b/ᏣᎳᎩ_ᎫᎾᏕᎶᏆᏍᏗ_ᏚᏓᏥᏍᎬᎢ.mw
@@ -1,4 +1,6 @@
 [[File:Cherokee Central Schools.jpg|thumb|ᎠᏴᏍᏙᏗ.]]
 '''ᏣᎳᎩ ᎫᎾᏕᎶᏆᏍᏗ ᏚᏓᏥᏍᎬᎢ'''  (''Cherokee Central Schools'')
 
+[[Category:ᏣᎳᎩ]]
+
 [[en:Cherokee Central Schools]]
