--- a/ᏣᎳᎩ_ᏗᎿᏬᎢ.mw
+++ b/ᏣᎳᎩ_ᏗᎿᏬᎢ.mw
@@ -11,7 +11,7 @@
 ᏳᎵᏍᏙᏗ ᎡᎳᏗᏜ, ᎦᏅᎯᏓ ᏅᎩ ᏧᏅᏏᏯ,
 ᏗᎦᏐᏆᎸ, ᎦᎸᏉᏗ ᏃᏈᏏ ᎥᏍᏊ.
 
-[[File:Screen shot 2010-09-13 at 8.29.32 PM.png]]
+[[File:Screen shot 2010-09-13 at 8.29.32 PM.png|thumb|Robert Lewis]]
 
 Ꮎ ᏥᏗᎨᏥᎢᎸᏍᏔᏁ ᎠᎬᏱᏗᏜ
 ᏱᏂᏧᎵᏍᏙᏗ ᏂᎨᏒᎾ ᏕᎪᏯᏛ ᏓᏍᏆᎳ
