--- a/ᏣᎳᎩ_ᏗᎿᏬᎢ.mw
+++ b/ᏣᎳᎩ_ᏗᎿᏬᎢ.mw
@@ -1,3 +1,4 @@
+[[File:Screen shot 2010-09-13 at 8.29.32 PM.png|thumb|left|Robert Lewis]]
 ᏣᎳᎩ ᏗᎦᏣᎦᎸᏴ ᏗᏌᏃ ᏚᎾᏌᏃᎮᎢ,
 ᎠᏂᏍᎦᏯᏃ ᎠᏇᏡᏍᏗ ᎪᏢᏔᏅ ᎠᎿᏬ
 ᏚᎾᏂᏪᎢ.
@@ -10,8 +11,6 @@
 ᏥᎩ, ᏧᏓᎴᏅᏓ ᏓᏂᏯᎸᏍᎪ ᎧᏅᏬᎢ
 ᏳᎵᏍᏙᏗ ᎡᎳᏗᏜ, ᎦᏅᎯᏓ ᏅᎩ ᏧᏅᏏᏯ,
 ᏗᎦᏐᏆᎸ, ᎦᎸᏉᏗ ᏃᏈᏏ ᎥᏍᏊ.
-
-[[File:Screen shot 2010-09-13 at 8.29.32 PM.png|thumb|Robert Lewis]]
 
 Ꮎ ᏥᏗᎨᏥᎢᎸᏍᏔᏁ ᎠᎬᏱᏗᏜ
 ᏱᏂᏧᎵᏍᏙᏗ ᏂᎨᏒᎾ ᏕᎪᏯᏛ ᏓᏍᏆᎳ
