--- a/ᎤᏐᎪᏍᏓᎩᎦᎨ_ᎣᎭᎳ.mw
+++ b/ᎤᏐᎪᏍᏓᎩᎦᎨ_ᎣᎭᎳ.mw
@@ -1,5 +1,7 @@
 [[ᎹᎦᏪᏘ ᎻᏤᎵ]]Ꮝ ''[[ᎪᏂ ᏫᏍ Ꮝ ᏫᏂ]]'' ([[1936]]) - [[1939]] [[ᏗᏟᎶᏍᏔᏅ]] [[ᏫᏫᏂ ᎴᎢ]]Ꮝ [[ᎣᏍᎧ]].
 
+[[Category:ᏁᎵᏒᎢ ᎠᏂᏴᏫ]] 
+
 [[ar:سكارليت أوهارا]]
 [[de:Scarlett O’Hara]]
 [[en:Scarlett O'Hara]]
