--- a/ᏩᏯ.mw
+++ b/ᏩᏯ.mw
@@ -1,5 +1,6 @@
-ᎯᎢᎾ ᎤᏂᏍᎦᏎᏗ ᎠᎾᏝᎢᏙᎯ ᏚᎾᎵᎪᏐ ᎠᏂᏃᎯᎵᏙᎲ ᏚᎾᏓᏡᎪᎢ.
-ᎠᏂᎨᎯᏙᎰ ᎠᏂᏃᎵᏙᎯ (ᎠᏫ, ᎠᏫᎡᏆ) ᎢᏅᎯᏴᎢ ᎩᎳ ᎠᏂᎨᎯᏙ
-ᏱᏚᏯᏪᏣ, ᎿᏊ ᎠᏂᏂᏱᏍᎪ. ᏗᏯᏖᎾ ᏚᎾᎳᏍᎬ
-ᎬᏩᏂᏍᏕᎵᏍᎪ ᎤᎾᏓᎾᏫᏍᏙᏗ ᎥᎾᏥ ᏱᎩ. ᎤᎾᏛᎪᏗ ᎣᏍᏓ
-ᎨᏐ ᏗᏓᏛᎪᏩᏅᏃ ᎠᏂᏐᎢ ᏩᎭᏯ ᎤᎾᏓᏡᎬ, ᎾᏂᏪᏒᎢ.
+[[File:Wolf at Woburn Safari Park.jpg|thumb|''Canis lupus'', ᎤᏍᎪᎸ ᏌᎪᏂᎨ, Woburn Safari ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎩᎵᏏᎯ]]
+ᎯᎢᎾ ᎤᏂᏍᎦᏎᏗ ᎠᎾᏝᎢᏙᎯ ᏚᎾᎵᎪᏐ ᎠᏂᏃᎯᎵᏙᎲ ᏚᎾᏓᏡᎪᎢ. ᎠᏂᎨᎯᏙᎰ ᎠᏂᏃᎵᏙᎯ (ᎠᏫ, ᎠᏫᎡᏆ) ᎢᏅᎯᏴᎢ ᎩᎳ ᎠᏂᎨᎯᏙ ᏱᏚᏯᏪᏣ, ᎿᏊ ᎠᏂᏂᏱᏍᎪ. ᏗᏯᏖᎾ ᏚᎾᎳᏍᎬ ᎬᏩᏂᏍᏕᎵᏍᎪ ᎤᎾᏓᎾᏫᏍᏙᏗ ᎥᎾᏥ ᏱᎩ. ᎤᎾᏛᎪᏗ ᎣᏍᏓ ᎨᏐ ᏗᏓᏛᎪᏩᏅᏃ ᎠᏂᏐᎢ ᏩᎭᏯ ᎤᎾᏓᏡᎬ, ᎾᏂᏪᏒᎢ.
+
+ᏩᏯ ᎭᏫᏯ ᎠᎩᏍᏗ.
+
+[[Category:Animalia]]
