--- a/ᎨᏥᎧᎲᏓ_ᎠᏁᎬᎢ.mw
+++ b/ᎨᏥᎧᎲᏓ_ᎠᏁᎬᎢ.mw
@@ -95,7 +95,7 @@
 * {{cite book | last = Wallace | first = Anthony FC | title = The Long, Bitter Trail: Andrew Jackson and the Indians | edition = | publisher = New York: Hill and Wang | year = 1993 | id = ISBN 0-8090-6631-9}}
 
 [[Category:ᏣᎳᎩ]]
-[[Category:ᎸᏃᎮᏍᎩ]]
+[[Category:ᎧᏃᎮᏍᎩ]]
 
 [[da:Trail of Tears]]
 [[de:Pfad der Tränen]]
