/* ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ */ updating ᏚᎾᏓᏟᏌᎲ

--- a/ᏙᏒᏓᎵ.mw
+++ b/ᏙᏒᏓᎵ.mw
@@ -235,7 +235,6 @@ Image:DirkvdM_ant_with_leaf.jpg|Leaf cutter ant carrying leaf
 </div>
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
-{{Wikispecies|Formicidae}}
 * [http://www.myrmecology.org/ Myrmecology] - ᎤᏂᎶᎯᏍᏗ ᎯᎠ ᎠᎦᏙᎲᏍᏗ ᏙᏒᏓᎵ ᎬᏙᏗ ᎠᏏᎾᏍᏛ ᏗᏤᎢ, ᏕᎬᏔᏛ ᏙᎪᏩᎸ, ᎠᏓᏃᎯᏎᏗ, FAQ, ᎠᏎᎸᎯ blogs ᎠᎴ ᎤᎪᏗᏗ ᎤᏟ ᎢᎦᎢ
 * [http://www.antweb.org/ antweb.org] - ᏙᏒᏓᎵ ᎯᎠ ᎡᎶᎯ
 * [http://antbase.org/ antbase.org] - info ᏀᎾ ᏂᎦᏛ ᎢᏗᎦᎪᏘ ᏙᏒᏓᎵ
@@ -247,13 +246,7 @@ Image:DirkvdM_ant_with_leaf.jpg|Leaf cutter ant carrying leaf
 * [http://antfarm.ma.cx/ The Ant Farm] - ᎠᏏᏴᏫ ᎤᏂᏏᎳᏛ ᏄᏍᏗᏓᏅ ᎬᏙᏗ ᏙᏒᏓᎵ ᎭᏫᎾᏗᏢ ᎣᏓᏅᏛ
 * [http://fort.thomas.free.fr/ The Ants] - ᎤᏂᏏᎳᏛ ᏄᏍᏗᏓᏅ ᎠᎦᎸᏥ ᏙᏒᏓᎵ
 
-[[Category:Ants| ]]
-[[Category:Hymenoptera]]
-[[Category:Insects as food]]
-[[Category:Pest insects]]
-[[Category:Symbiosis]]
-[[Category:Biological pest control]]
-[[Category:Invasive species]]
+[[Category:ᏨᏍᎪᏱ]]
 
 [[an:Formicidae]]
 [[ang:Ǣmette]]
