--- a/ᎩᎦ_ᎤᎸᏌᏓ.mw
+++ b/ᎩᎦ_ᎤᎸᏌᏓ.mw
@@ -293,8 +293,7 @@ collisionless ᎠᏣᏅᏙ. ᎾᎿᎢ ᎠᎴ ᏔᎵ ᏧᏣᏔᏊ approaches kine
 {{Nuclear Technology}}
 
 <!--Categories-->
-[[Category:Plasma physics| ]]
-[[Category:Astrophysics]]
+[[Category:ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]
 
 <!--Interwiki-->
 
