--- a/ᎭᏰᎳᏍᏗ.mw
+++ b/ᎭᏰᎳᏍᏗ.mw
@@ -198,17 +198,7 @@ Honing ᎠᏂᏅᏯ (ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ [[Sharpening stone#Oil sto
 * [http://www.huntingblades.com/index.html Hunting Knives]
 * [http://www.keramikmesser-online.com Keramikmesser]
 
-[[Category:Knives|*]]
-[[Category:Pocket knife]]
-[[Category:Tools]]
-[[Category:Lithics]]
-[[Category:Archaeological artefact types]]
-[[Category:Blade weapons]]
-[[Category:Survival skills]]
-[[Category:Food utensils]]
-[[Category:Hiking equipment]]
-
-{{Link FA|ru}}
+[[Category:ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ]]
 
 [[an:Cuitiello]]
 [[ang:Seax]]
