--- a/ᎧᏃᎮᏙᏗ.mw
+++ b/ᎧᏃᎮᏙᏗ.mw
@@ -467,15 +467,7 @@ Online ᎠᎵᏃᎮᏗ ᎭᏫᎾᏗᏢ morse ᎠᏍᏓᏩᏛᏍᏙᏗ [http://ww
 
 <references />
 
-[[Category:History of radio]]
-[[Category:Amateur radio]]
-[[Category:Assistive technology]]
-[[Category:Encodings]]
-[[Category:Radio modulation modes]]
-[[Category:Survival skills]]
-[[Category:Telecommunications history]]
-[[Category:Character sets]]
-[[Category:Latin alphabet representations]]
+[[Category:ᏗᏛᎪᏔᏅ]]
 
 [[af:Morsekode]]
 [[ar:شفرة مورس]]
