--- a/ᏙᏒᏓᎵ.mw
+++ b/ᏙᏒᏓᎵ.mw
@@ -223,7 +223,7 @@ Image:DirkvdM_ant_with_leaf.jpg|Leaf cutter ant carrying leaf
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 * [[Ant-hill|ᏙᏒᏓᎵ-ᎦᏚᏏ]]
-* [[Anteater]]
+* [[Anteater|ᏙᏒᏓᎵ-ᏗᎩᏍᎩ]]
 * [[Formicarium|ᏙᏒᏓᎵ ᎦᎶᎨᏒ]]
 * [[British ants|ᎩᎵᏏ ᏙᏒᏓᎵ]]
 * [[List of ants of India|ᎠᏴᏫᏯ ᏙᏒᏓᎵ]]
