--- a/ᎪᎷᏩᏛᎲ_ᎢᎬᏁᏗ.mw
+++ b/ᎪᎷᏩᏛᎲ_ᎢᎬᏁᏗ.mw
@@ -175,17 +175,13 @@
 * [http://www.ipmenu.com IPMenu] - IP ᎠᏓᏃᎯᏎᏗ ᏙᎪᏩᎸ ᎬᏙᏗ ᎠᏯᏍᏗ capabilities
 
 === ᎤᏬᏢᏗ ᎠᎴ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ===
-
 * [http://www.patent.freeserve.co.uk/ ''Patently Absurd'' British Patents]
 * [http://www.library.umaine.edu/patents/historical.htm Information on Historical Patents]
 * [http://www.patentlysilly.com Patently Silly]
 * [http://ipfunny.blogs.com IP Funny Blog]
 * [[Patent Bending|ᎪᎷᏩᏛᎲ ᎢᎬᏁᏗ ᎠᏗᏌᏓᏗᏍᏗ]] TV ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ
 
-
-[[Category:Intellectual property]]
-[[Category:Patent law|*]]
-[[Category:Monopoly (economics)]]
+[[Category:ᏗᎧᎿᏩᏛᏍᏗ]]
 
 [[af:Patent]]
 [[ar:براءة اختراع]]
