--- a/ᎪᏢᏅ.mw
+++ b/ᎪᏢᏅ.mw
@@ -99,7 +99,7 @@ Melted ᎪᏢᏅ ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡ
 * [http://www.milkingredients.ca/dcp/article_e.asp?catid=145&page=216 Composition and characteristics of butter, The Canadian Dairy Commission]
 * [http://www.foodsci.uoguelph.ca/dairyedu/butter.html Manufacture of butter, The University of Guelph]
 
-[[Category:Butter|*]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[als:Butter]]
 [[ar:زبدة]]
