--- a/ᎠᏍᏆᏂᎪᏒᏗ_ᏂᎦᎵᏍᏔᏂᏙᎲ.mw
+++ b/ᎠᏍᏆᏂᎪᏒᏗ_ᏂᎦᎵᏍᏔᏂᏙᎲ.mw
@@ -1,11 +1,11 @@
-[[File:010105 fireworks2.jpg|thumb|right|290px|ᎯᎠ [[Sydney Harbour Bridge|Sydney Harbour ᎠᏒᏢᎢ]] ᎠᎴ ᎯᎠ [[Sydney Opera House|Sydney ᎤᎾᏛᏁᎳᏗ ᎦᎵᏦᏕ]] illuminated ᎭᏫᎾᏗᏢ ᎢᏤ ᏑᏕᏘᏴᏓ ᎤᏤᎵ ᏒᎯᏰ ᎠᏍᏆᏂᎪᏒᏗ 2005]]
+[[File:Lotto Skyworks Applecross.jpg|thumb|right|300px|Applecross, ᏒᎳᏗᏝ]]
 
 '''ᎠᏍᏆᏂᎪᏒᏗ ᏂᎦᎵᏍᏔᏂᏙᎲ''' (ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ '''ᎠᏍᏆᏂᎪᏒᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ''' ᎠᎴ '''ᎠᏍᏆᏂᎪᏒᏗ ᎤᎾᏛᏁᎸᏗ''') ᎨᏒᎢ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎯᎠ ᏄᎵᏍᏔᏅ ᎠᏛᎯᏍᏔᏅ ᎾᎥᎢ [[firework|ᎤᎦᎾᏭ]] ᏄᏍᏛ ᏗᎧᏃᏗ ᎾᎿ ᏧᏓᎴᏅᏓ ᎢᏳᏓᎵᎭ. ᎠᏍᏆᏂᎪᏒᏗ ᎠᏓᎪᏅᏙᏗᏱ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏂᎦᏛ ᎤᏠᏱᎭ ᎠᏰᎲᎩ ᎾᎾᎢ ᏎᏍᏗ ᏚᏙᏢᏒᎢ.
 
 == ᎧᏃᎮᏍᎩ ==
 ᏥᏄᏍᏗ ᎢᎬᏱ ᏥᏄᏍᏗ ᎯᎠ Chinese [[Han Dynasty|Han ᏓᎳᏏᏛ]] ([[206 BC]]–[[220|ᏂᏓᏙᎳᎬᎾ 220]]) ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎢᎬᏱ [[firecrackers|ᎠᏍᏆᏂᎪᏒᏗ]] (ᏄᏦᏍᏛᎾ ᎠᏍᏆᏂᎪᏒᏗ) ᎨᏒᎩ ᎪᏢᏅᎯ ᎾᎥᎢ ᎠᎵᏢᏙᏗ [[bamboo]] ᎠᏛᎯᏍᏙᏗ ᎯᎠ ᎠᏍᏓᏯ ᎤᏃᏴᎬ (ᎤᎾᏅᏛ ᏥᏄᏍᏗ "bian pao") Ꮎ ᏥᏄᏍᏛᎩ ᏄᏪᎵᏒ ᎤᎾᏰᎯᏍᏗ ᎤᏐᏅᎢ ᏗᏓᏅᏙ. ᎭᏫᎾᏗᏢ ᎯᎠ [[Northern Dynasty|ᎤᏴᏢ ᎢᏗᏢ]] ᎠᎴ [[Southern Dynasty|ᎤᎦᎾᏭ ᎢᏗᏢ Dynasties]] ([[420|ᏂᏓᏙᎳᎬᎾ 420]]–[[581]]) ᎯᎠ ᎠᏍᏆᏂᎪᏒᏗ ᎨᏒᎩ ᎬᏔᏅᎯ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᏗᏗᎦᎴᏴ ᎤᏐᏅᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᏙᏙᎵᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎠᎵᎮᎵᏥᏓᏍᏗ ᎠᎴ ᎣᏍᏛ.
 
-[[File:RoyalFireworks.jpg|thumb|right|250px| ᎠᏂᎶᏁᏍᎬ ᎯᎠ 'ᎠᏥᎸᏉᏗ ᏴᏫ ᎠᏍᏆᏂᎪᏒᏗ' ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᎿ ᎯᎠ [[River Thames|Thames]] ᎭᏫᎾᏗᏢ [[1749]].]]
+[[File:RoyalFireworks.jpg|thumb|right|250px| ᎠᏂᎶᏁᏍᎬ ᎯᎠ 'ᎠᏥᎸᏉᏗ ᏴᏫ ᎠᏍᏆᏂᎪᏒᏗ' ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎾᎿ ᎯᎠ [[River Thames|Thames]] ᎭᏫᎾᏗᏢ 1749.]]
 
 ᎯᎠ ᎪᎷᏩᏛᏗ [[gunpowder|ᏄᏓᏅᏛᎾ]] ᎠᎴ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᏗᏁᏝᎾ ᎤᏙᎯᏳ ᎠᏍᏆᏂᎪᏒᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ atsitugv ᎯᎠ Chinese. Taoist ᎠᏍᎦᏯ ᎤᏓasgaya udal nigesvna ᏚᎾᏁᎶᏅ ᎬᏙᏗ ᎯᎠ ᏄᏦᏍᏛᎾ ᏑᏓᎴᎩ ᏄᏓᏅᏛᎾ ᎪᏢᏗ ᎠᏍᏆᏂᎪᏒᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎠᎯᏯᏍᏗ iyuwakodi. ᏭᎵᏱᎶᎸ, ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎠᎴ agatohvsdi [[firework|ᎤᎦᎾᏭ]] ᎠᏃᏢᏍᎬ ᎤᏙᎷᏩᏛᏓ ᎾᎾᎯ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᏄᎬᏫᏳᏒ ᏗᏕᏲᎲᏍᎩ Ꮝ ᎣᏤᎵ. ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ ᎠᎦᎾᏫᏗᏍᎩ, pyrotechnicians (ᎤᎦᎾᏭ-ᏄᏂᎬᏫᏳᏌᏕᎩ) ᎨᏒᎩ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎪᎯᏳᏅᎯ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᎥᎦᏔᎲᎢ ᎠᎴ ᎠᏏᎾᏒᎢ ᎠᎩᎶᎯᏍᏗ ᎤᎦᎾᏭ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎠᏨᏍᏛ ᎠᎴ ᎤᏃᏴᎬ. ᎢᎦᏛ ᏗᏕᎶᏆᏍᎩ ᎯᏁᎩ ᎠᏍᏆᏂᎪᏒᏗ ᎨᏒᎩ ᎤᏙᎷᏩᏛᏓ ᎭᏫᎾᏗᏢ ᎯᎠ [[Sui Dynasty|Sui]] ᎠᎴ [[Tang Dynasty|ᏄᏍᏛ ᎠᎩᏍᏗ]] Dynasties ([[581]]–[[907]]), ᎠᎴ ᎠᏂᏐᎢ ᎠᏘᏲᎯᎭ ᎾᎿᎢ ᎨᏒᎩ Ꮭ ᎠᏍᏆᏂᎪᏒᏗ iyuwakodi ᎯᎠ [[Northern Song Dynasty|ᎤᏴᏢ ᎢᏗᏢ ᎧᏃᎩᏍᏗ ᏓᎳᏏᏛ]] ([[10th century|10th sqohitsuqui tsudetiyvdi]]).
 
@@ -123,7 +123,6 @@ Licensing ᎾᏍᎩᎾᎢ ᎤᎦᎾᏭ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎭᏫᎾᏗᏢ
 
 == ᏧᏂᎧᎿᏩᏛᏍᏗ ᎠᎴ atogiyadv ==
 === ᏄᎾᏰᎯᏍᏛᎾ consumer ᎠᏍᏆᏂᎪᏒᏗ ===
-{{cleanup-date|July 2006}}
 Availability ᎠᎴ ᎬᏙᏗ consumer ᎠᏍᏆᏂᎪᏒᏗ ᎠᎴ ᎤᏗᎴᎩ debated ᎢᏳᏍᏗ ᎧᏃᎮᏗ. ᏗᎫᎪᏔᏅ ᎠᎴ ᏄᎾᏰᎯᏍᏛᎾ ᎦᏂᎳᏗᏍᏗ ᎪᏍᏓᏱ ᎯᎠ ᎤᏂᎪᏗᏗ injuries ᎠᎴ ᎤᏎᎦᏤᎸ ᎠᏥᎸ Ꮎ ᎠᎴ ᎠᏠᏯᏍᏔᏅ ᎠᏍᏆᏂᎪᏒᏗ ᏥᏄᏍᏗ ᎦᎴᏴᏗᏍᎬᎢ ᎾᏍᎩᎾᎢ banning ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏂᎬᎢ ᎠᏓᏍᏚᏁᏗ ᎦᎷᎯᏍᏗ ᎠᏍᏆᏂᎪᏒᏗ.  ᏗᏓᏚᎯᏍᏙᏗ ᎬᏩᏚᏫᏛ ᎤᎶᏒᏍᏔᏅ ᎤᏃᏴᎬ ᎪᏢᏅᎯ ᎾᎥᎢ ᎠᏍᏆᏂᎪᏒᏗ ᎠᎴ ᎯᎠ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᎢᎦᏛ ᎠᎴ fallout ᎠᎦᏍᎦᏂ ᎦᏬᎯᎸᏙᏗ ᎤᎶᏐᏅ ᎫᏢᎥᏍᎬ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᎠᎵᏍᏕᎸᏗ ᎪᎯ ᎾᎿ ᎦᏙᎬ.  ᎾᎿᎢ ᎠᎴ ᎤᏂᎪᏗᏗ ᏄᎵᏍᏔᏂᏙᎸ consumer ᎠᏍᏆᏂᎪᏒᏗ ᎠᎴᏂᏙᎲ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏄᏍᏛᎢ Ꮎ ᎨᏒᎢ ᏄᏪᎵᏒ ᎠᎾᏓᎵᏍᎦᎾᏁᎲ ᎯᎠ ᎾᎥ ᏄᎾᏓᎸ ᎠᎴ ᎾᎥ ᏄᎾᏓᎸ ᎭᏢᏃ ᎯᎠ ᏗᎦᎴᏴᏗᏍᎩ ᎠᎴᏂᏓᏍᏗ.
 
 ᎾᎯᏳ ᏯᏛᎿ, ᎾᏍᎩ ᎦᎪ ᎠᎵᏍᏕᎸᏗ ᎤᏟ ᎢᎦᎢ ᏄᎨᏳᎿᎲᎾ ᎤᎦᎾᏭ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎭᎦᏔ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ ᎢᎦ ᏄᎵᏍᏔᏅᏒ ᏥᏄᏍᏗ ᎯᎠ ᏗᎫᎪᏔᏅ ᎠᎴ ᎠᏍᏆᏗᏏᏐᏗ Ꮎ, ᎯᎳᎪ ᎢᏳ ᎬᏔᏅᎯ ᏗᏙᎳᏤᎩ, consumer ᎠᏍᏆᏂᎪᏒᏗ ᎠᎴ safer ᎤᏙᏢᏒ recreation ᎬᎾᏬᏍᎬ ᎠᎩᎸᎥᏍᎬ ᎤᏍᏗ ᏓᏆᎴᎷ ᎠᎴ ᏓᎾᏁᎶᎲᏍᎬ soccer{{citation-needed}}.  ᎨᏯᏔᎯ ᏓᎪᎵᏰᏍᎬ ᎯᎠ ᎪᏪᎸ ᏄᏍᏗᏓᏅ agatudesdi Ꮎ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ fatalities ᏂᏛᎴᏅᏓ consumer ᎠᏍᏆᏂᎪᏒᏗ ᎠᎴ ᎤᏍᏆᎸᎲ ᎯᎠ ᏗᎦᎴᏴᏗᏍᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᏓᏩᏗᏒ ᎯᎠ ᏫᏂᏚᏳᎪᏛ ᎦᎴᏯᏔᏅᎯ ᎾᎿ ᎯᎠ ᏚᏙᎥ ᎦᏯᎸ{{citation-needed}}. ᏄᎾᏰᎯᏍᏛᎾ ᎦᏂᎳᏗᏍᏗ ᎦᏂᎳᏗᏍᏗ ᏴᏫ "ᎠᏓᏅᏍᏗ ᎾᏍᎩ ᎯᎠ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ": ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏧᎳ ᎠᏴ, ᏂᎯ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏄᏓᎷᎸᎾ ᎾᏍᏋ ᎠᏥᏐᏅᏅᎯ ᎠᏱᎵᏒ ᎭᏫᎾᏗᏢ ᏂᎯ ᎠᏦᏙᏗ ᎠᎴ ᏂᏛᎴᏅᏓ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᏍᏆᏂᎪᏒᏗ ᎤᎾᏛᏁᎸᏗ ᎬᎾᏬᏍᎬ ᏂᎯ ᎠᎴ ᎾᏍᏋ ᎠᏥᏐᏅᏅᎯ ᎾᎥᎢ ᎬᏗᏍᎬᎢ consumer ᎠᏍᏆᏂᎪᏒᏗ ᎭᏫᎾᏗᏢ ᏂᎯ backyard{{citation-needed}}.<!--This last sentence sentence seems awkward in the context of the rest of the paragraph.  As it currently reads, it seems self-contradictory and POV.-->
@@ -182,9 +181,7 @@ Las ᏂᎬᏅ ᎠᏍᏆᏂᎪᏒᏗ ᏧᏂᎧᎿᏩᏛᏍᏗ: ᎠᎾᎵᏖᎸᎲ
 * [http://ohadonline.com/fireworks Photos of fireworks taken during the 4th of July in Washington, DC]
 * [http://linkitt.com/index.php?title=Fireworks Video Clips of Fireworks]
 
-[[Category:Pyrotechnics]]
-[[Category:Entertainment]]
-[[Category:Fireworks]]
+[[Category:ᎠᏥᎳ]]
 
 [[ar:ألعاب نارية]]
 [[bg:Фойерверк]]
