--- a/ᎤᏍᏗᏰᎬ.mw
+++ b/ᎤᏍᏗᏰᎬ.mw
@@ -203,10 +203,7 @@ g ᎤᏍᏗᏰᎬ]]
 {{integumentary_system}}
 {{human anatomical features}}
 
-[[Category:Hair| ]]
-[[Category:Human appearance]]
-[[Category:Integumentary system]]
-[[Category:Animal anatomy]]
+[[Category:ᎠᏂᏴᏫ]]
 
 <!-- The below are interlanguage links. -->
 
