--- a/ᏙᏯ.mw
+++ b/ᏙᏯ.mw
@@ -164,10 +164,7 @@ lyudetiyvda ᎤᎾᎵᏃᎯᏴᎯ ᏙᏯ ᎠᎴ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ Ꭿ
 * [http://purl.galileo.usg.edu/ugafax/QL737xR6xD84 The romance of the beaver;] ᎠᎴᏂᏙᎲ ᎯᎠ ᎧᏃᎮᏍᎩ ᎯᎠ ᏙᏯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏭᏕᎵᎬᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎾᎥᎢ . Radclyffe Dugmore. ᏚᏟᎶᏍᏔᏅ ᎬᏙᏗ ᏗᎨᎦᏟᎶᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎥᎴᏂᏙᎲ ᎠᎴ ᏓᎾᏎᏍᎬ ᎾᎥᎢ ᎯᎠ ᎪᏪᎵ Ꭺgoweli gowlisgi. ᏗᎦᎴᏴᏗᏍᎩ: Philadelphia, J.B. Lippincott ᎤᎾᏓᏡᎩ; London, W. Heinemann [[1914]] ''(searchable ᎢᏗᎦᏘᎭ ᎾᎾᎢ ᎯᎠ ᏗᏕᎶᏆᏍᏗ Georgia Libraries)'' 
 {{1911}}
 
-[[Category:Beavers]]
-[[Category:Fur trade]]
-
-{{Link FA|ca}}
+[[Category:Animalia]]
 
 [[ar:قندس]]
 [[bg:Бобри]]
