--- a/ᏓᏆ.mw
+++ b/ᏓᏆ.mw
@@ -116,7 +116,7 @@ Cetaceans ᎤᏂᏯᏙᎸ ᎾᏀᎢ ᏔᎵ ᎠᏓᏅᏍᏗ:
 * [http://www.sciencedaily.com/news/plants_animals/dolphins_and_whales/ Research on dolphins and whales from Science Daily]
 * [http://www.wdcs.org/ Whale and Dolphin Conservation Society - latest news and information on whales and dolphins]
 
-[[Category:Cetaceans]]
+[[Category:Animalia]]
 
 [[af:Walvis]]
 [[ang:Hƿæl]]
