--- a/ᏡᎬᎢ.mw
+++ b/ᏡᎬᎢ.mw
@@ -349,14 +349,7 @@
 * [[Thomas Pakenham|Pakenham, T.]] (2002). ''ᎤᏍᏆᏂᎪᏗᏳ ᏕᏡᎬ ᎯᎠ ᎡᎶᎯ''. ISBN 0-297-84300-1
 * Pakenham, T. (1996). ''ᏓᎾᏠᏍᎦ ᎬᏙᏗ ᎤᏍᏆᏂᎪᏗᏳ ᏕᏡᎬ''. ISBN 0-297-83255-7
 
-[[Category:Plants]]
-[[Category:Forestry|*]]
-[[Category:Trees|*]]
-[[Category:Botany]]
-[[Category:Plant morphology]]
-
-{{Link FA|de}}
-{{Link FA|he}}
+[[Category:ᏡᎬ| ]]
 
 [[af:Boom]]
 [[an:Árbol]]
