--- a/ᏗᎦᎸᏫᏍᏓᏁᏗ.mw
+++ b/ᏗᎦᎸᏫᏍᏓᏁᏗ.mw
@@ -173,8 +173,7 @@
 *[http://www.ibtimes.com/ International Business Times] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎪᏪᎵ ᎦᎴᏴᏔᏅ ᎬᏙᏗ global ᏗᏤᎢ coverage.
 *[http://www.experienced-people.co.uk/ Buying and selling businesses]
 
-[[Category:Business]]
-[[Category:School subjects]]
+[[Category:ᎠᎵᏏᏅᏙᏗ]]
 
 [[ar:عمل تجاري]]
 [[arc:ܫܘܓܠܐ]]
