--- a/ᏃᏈᏏ.mw
+++ b/ᏃᏈᏏ.mw
@@ -1,3 +1,4 @@
+[[File:Bob Star - M45 Carranza Field (by).jpg|thumb|Pleiades]]
 '''ᏃᏈᏏ''' [[Sun|ᏅᏙ ᎢᎦ ᎡᎯ]]. Unlike [[planet]], ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎤᎪᏗᏗ ᎠᏨᏍᏛ ᎨᏒᎢ reflected, ᏃᏈᏏ emits ᎠᏨᏍᏛ ᎢᎬᏂᏏᏍᎩ Ꮝ ᎤᎶᏒᏍᏗ [[blackbody radiation|ᎤᎦᎾᏭ]]. Scientifically, ᎠᏂᏃᏈᏏ ᎠᎴ ᎧᏁᎢᏍᏔᏅᎯ ᏥᏄᏍᏗ [[Gravity#Self-gravitating system|ᎣᏩᏒ-gravitating]] spheres plasma ᎭᏫᎾᏗᏢ [[hydrostatic equilibrium]], ᎦᏙ ᎤᏍᏗ generate ᎤᎾᏤᎵ ᎣᏤᎵ [[energy|ᏄᎵᏂᎬᎬ]] ᏗᎬᏩᎶᏒ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ [[nuclear fusion]]. [[Stellar astronomy]] ᎨᏒᎢ ᎯᎠ ᎠᎦᏎᏍᏙᏗ ᎠᏂᏃᏈᏏ.
 
 ᎠᏂᏏᏴᏫᎭ ᎠᏂᏃᏈᏏ ᏚᏓᎴᎿᎥ ᏂᏛᎴᏅᏓ ᎠᏂᏏᏴᏫᎭ ᏐᎢ ᎤᏍᏆᎸᎲ ᎤᎾᏤᎵ ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᏟᏌᏅ ᎤᎪᏗᏗ, ᎤᎾᏤᎵ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ, ᎠᎴ ᎤᎾᏤᎵ lyudetiyvda. ᎯᎠ ᏂᎦᏛ ᎦᏟᏌᏅ ᎦᏟᏌᏅ ᎤᎪᏗᏗ determines ᎯᎠ ᏫᏚᏳᎪᏛ evolution ᏃᏈᏏ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ Ꮝ eventual ᎢᏳᏓᎵᏍᏓᏁᏗ. [[Hertzsprung-Russell diagram|Hertzsprung-Russell ᎠᏓᏕᏲᎲᏍᎩ ᎪᏪᎸ]] ᏓᎾᏛᏁᎵᏍᎬ ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎯᎠ ᏄᏁᏌᏴᏢ ᎠᏂᏃᏈᏏ ᏗᎦᏘᎴᎩ ᎤᎾᏤᎵ ᎤᏙᎯᏳᎯᏯ magnitude, ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᏗᎫᎪᏙᏗ ᎯᎠ overall lyudetiyvda ᏃᏈᏏ ᎠᎴ ᎯᎠ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎭᏫᎾᏗᏢ Ꮝ evolution. Initially, ᎠᏂᏃᏈᏏ ᎠᎴ composed ᎢᎬᏱᏗᏢ [[hydrogen]], ᎬᏙᏗ ᎢᎦᏛ [[helium]] ᎠᎴ ᎦᎨᏓᎨ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏧᏓᎴᎩ Ꮎ ᏗᎫᎪᏙᏗ ᎯᎠ [[metallicity]] ᏃᏈᏏ. ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᏫᏚᏳᎪᏛ ᏃᏈᏏ ᎤᏤᎵ evolution, ᎢᎦᏛ ᎯᎠ hydrogen ᎨᏒᎢ converted ᎾᎾᎯ ᎦᎨᏓᎨ ᎢᏧᏓᎴᎩ ᏗᎬᏩᎶᏒ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ nuclear fusion. ᎢᎦᏛ ᎯᎠ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ ᎨᏒᎢ ᎾᎯᏳᎢ recycled ᎦᏐᎯ ᎾᎾᎯ ᎯᎠ interstellar environment, ᎭᏢᏃ ᎾᏍᎩ ᎨᏒᎢ ᎬᏔᏅᎯ ᎤᏙᏢᏒ ᎢᏤ ᎤᎾᏁᎶᏔᏅ ᎤᏟ ᎢᎦᎢ [[metal-rich|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ-ᎤᏪᎾᎢ]] ᎠᏂᏃᏈᏏ.
@@ -178,12 +179,8 @@ Astronomers ᎠᎦᏎᏍᏙᏗ Ꮎ ᎾᎿᎢ ᎠᎴ ᎾᎾᎢ least 70 [[sextill
 * [http://news.bbc.co.uk/1/hi/sci/tech/4728228.stm Top stars picked in alien search]
 * [http://www.enchantedlearning.com/subjects/astronomy/stars/startypes.shtml Star Classification]
 * [http://www.nasa.gov/worldbook/star_worldbook.html Star Worldbook]
-[[Category:Stars| ]]
-[[Category:Astronomical objects]]
 
-{{Link FA|de}}
-{{Link FA|es}}
-{{Link FA|ro}}
+[[Category:ᏗᎦᎸᎳᏗ]]
 
 [[af:Ster]]
 [[an:Estrela]]
