--- a/ᎤᏅᏉᎳᏛ.mw
+++ b/ᎤᏅᏉᎳᏛ.mw
@@ -145,7 +145,6 @@
 * {{note|Nussenzveig}} Nussenzveig, H. Moyses, “The ᎪᎷᏩᏛᏗ ᎯᎠ ᎤᏅᎪᎳᏛ,” ''ᎠᏏᎾᏍᏛ ᏴᏩᏁᎬ'' '''236''' (1977), 116
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
-{{wikiquotepar|Rainbows}}
 {{commons|Rainbow}}
 * [http://www.sundog.clara.co.uk/rainbows/supers.htm Supernumerary rainbows]
 * [http://www.atoptics.co.uk/ Lez Cowly's Atmospheric Optics]
@@ -159,9 +158,7 @@
 * [http://www.wetter-foto.de/fotos-11-1-all-Regenbögen.html Rainbow photography from Germany]
 * [http://mitworld.mit.edu/video/33/ Walter Lewin's Discussion on colors and rainbow physics]
 
-{{featured article}}
-
-[[Category:Optical phenomena]]
+[[Category:ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]
 
 [[af:Reënboog]]
 [[an:Arco de Sant Chuan]]
