--- a/ᎦᏚᎲᎢ.mw
+++ b/ᎦᏚᎲᎢ.mw
@@ -109,10 +109,7 @@
 * [http://etext.lib.virginia.edu/cgi-local/DHI/dhi.cgi?id=dv1-52 ''Dictionary of the History of ideas'':] ᎯᎠ ᎦᏚᎲᎢ
 * [http://www.bifurcaciones.cl bifurcaciones.cl, urban cultural studies journal]
 
-{{Subnational entity}}
-
-[[Category:Cities| ]]
-[[Category:Subnational entities]]
+[[Category:ᏗᏓᏙᎳᏤᎸ]]
 
 {{Link FA|pt}}
 
