/* ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ */ updating cat

--- a/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
+++ b/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
@@ -253,7 +253,6 @@ Image:Banded Blue Pierrot.JPG|'''Banded Blue Pierrot''',<br>''[[Discolampa ethio
 ===ᏂᎦᎥ ᎤᏁᏉᏨ===
 {{commons|Butterfly|ᎧᎹᎹ}}
 
-
 ===ᎤᏔᏂᏗ ᎦᏙᎯ ᏠᎨᏏ===
 
 ===ᎾᏍᎩᏯᎢ repositories===
@@ -263,8 +262,7 @@ Image:Banded Blue Pierrot.JPG|'''Banded Blue Pierrot''',<br>''[[Discolampa ethio
 
 <!-- Place categories and templates below this line -->
 
-[[Category:Butterflies|*]]
-[[Category:Pollinators]]
+[[Category:ᏨᏍᎪᏱ]]
 
 [[af:Skoenlapper]]
 [[ar:فراشة]]
