--- a/ᎧᏫ.mw
+++ b/ᎧᏫ.mw
@@ -109,16 +109,8 @@
 *[http://www.coffeegeek.com Coffeegeek.com] - ᎯᎠ consumer ᏅᎬᎪᏙᏗ ᎧᎾᏁᏍᎦ ᎤᏏᎵᏕᏫᏒ ᏄᏍᏓ ᏂᎦᏛ ᎬᏩᏚᏫᏛ ᎯᎠ ᎢᎦ ᎣᏏ ᎧᏫ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎯᎠ ᏌᏌ
 *[http://historyofalcoholanddrugs.typepad.com/alcohol_and_drugs_history/coffee/index.html Coffee news page] - [[Alcohol and Drugs History Society|ᎠᎹ ᎠᏑᏴᏗ ᏫᏍᎩ ᎠᎴ ᏄᏬᏗ ᎧᏃᎮᏍᎩ ᎤᎾᏙᏢᎯ]]
 
-{{Coffee}}
-
-[[Category:Coffee|*]]
-[[Category:Arabic words]]
-[[Category:Coffeeshops]]
-[[Category:Crops]]
-
-{{Link FA|es}}
-{{Link FA|no}}
-{{Link FA|vi}}
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
+[[Category:Plantae]]
 
 [[af:Koffie]]
 [[am:ቡና]]
