--- a/ᏓᏎᏘ.mw
+++ b/ᏓᏎᏘ.mw
@@ -154,8 +154,7 @@ Illuminated ᎠᏕᏲᎲ [[disco ball|ᎤᏪᏙᎵᏍᏗ ᎠᎳᏍᎦᎶᏗ]]Ꭻ
 ==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
 * [http://vision2form.nl/mirror_history.html History of mirrors and glass]
 
-[[Category:Mirrors]]
-[[Category:Luck]]
+[[Category:ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ]]
 
 [[ar:مرآة]]
 [[arc:ܡܚܙܝܬܐ]]
