--- a/ᎯᎸᏍᎩ_ᏥᏍᏆ.mw
+++ b/ᎯᎸᏍᎩ_ᏥᏍᏆ.mw
@@ -80,8 +80,6 @@
 
 ᎾᏍᎩᎾᎢ ᎧᎵᏬᎯ ᏙᎪᏩᎸ lyudetiyvda ᏥᏍᏆ ᏚᎾᏓᏟᏌᎲ, ᎠᎪᏩᏛᏗ [[Fossil birds|lyudetiyvda ᎯᎸᏍᎩ ᏥᏍᏆ]].
 
-
-
 == ᎠᏓᎴᏂᏍᎬ ==
 ᎾᎿᎢ ᎨᏒᎢ ᎦᏛᎬᎢ ᎪᎯᏳᏙ Ꮎ ᎯᎸᏍᎩ ᏥᏍᏆ ᏚᏙᎳᏩᏛᎲ ᏂᏛᎴᏅᏓ [[Theropoda|theropod]] [[Dinosauria|dinosaurs]], ᎧᎵ ᏗᎪᎥᎯ, Ꮎ ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᎴ ᎠᏁᎳ [[Maniraptora]], ᎤᎾᏓᏟᏌᎲ theropods ᎦᏙ ᎤᏍᏗ ᎠᏠᏯᏍᏗ [[dromaeosaur]]ᎠᎴ [[Oviraptoridae|oviraptorids]], ᏄᎾᏛᏅ ᎠᏂᏐᎢ.<ref>{{cite web | url=http://www.sciencemag.org/cgi/content/abstract/274/5290/1164 | title=Early Adaptive Radiation of Birds: Evidence from Fossils from Northeastern China -- Hou et al. 274 (5290): 1164 -- Science | accessdate=2006-07-21}}</ref> ᏥᏄᏍᏗ ᎤᏟ ᎢᎦᎢ ᎬᏙᏗ-avian theropods Ꮎ ᎠᎴ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᎴ ᎪᎷᏩᏛᏓ, ᎯᎠ ᏧᏩᎦᏔᏅᏍ ᏧᎸᏌᏓ ᎤᎾᏤᎵᏛ ᎠᏰᎵ ᎬᏙᏗ-ᎯᎸᏍᎩ ᏥᏍᏆ ᎠᎴ ᎯᎸᏍᎩ ᏥᏍᏆ ᏗᏙᎳᎩ ᎦᏲᎵᎨ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ. ᎾᏞᎬ discoveries ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎧᎸᎬ ᎢᏗᏢ [[China|ᎠᎦᎾᏫᏗᏍᎩ]] ([[Liaoning]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ) ᎬᏂᎨᏒ ᎾᏅᏁᎲ Ꮎ ᎤᎪᏗᏗ ᎤᏍᏗ theropod dinosaurs ᎠᏰᎲ ᏧᎷᏄᎯ ᎠᎵᏍᎪᎸᏙᏗ ᎪᎯ ᎾᏍᏋ.
 
@@ -173,7 +171,7 @@ Colorful, ᎾᏍᎩᎾ ᎨᏒ ᎤᎦᎾᏭ, ᎯᎸᏍᎩ ᏥᏍᏆ (e.g., [[Parr
 * [[The biology of eggs|ᎤᏪᏥ ᎤᎾᏙᏢᎯ]]
 * [[Extinct birds|ᎠᎧᎵᏏᏐᏗ ᎯᎸᏍᎩ ᏥᏍᏆ]]
 * [[Language of the birds|ᎦᏬᏂᎯᏍᏗ  ᎯᎠ ᎯᎸᏍᎩ ᏥᏍᏆ]]
-* [[List of birds|ᏙᎪᏩᎸ  ᎯᎸᏍᎩ ᏥᏍᏆ]]
+* [[List of birds|ᏙᎪᏩᎸ ᎯᎸᏍᎩ ᏥᏍᏆ]]
 * [[List of regional bird lists|ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᎴ ᏙᏱᏗᏢ ᎦᏚᎲ ᏥᏍᏆ ᏠᎨᏏ]]
 * [[Longisquama]]
 * [[Oology]]
@@ -205,7 +203,7 @@ Please note Wikipedia is not a repository of links! Only include major internati
 *[http://worldtwitch.com/ Worldtwitch] - ᎢᏳᏓᎵᎭ ᏥᏍᏆ ᏗᏤᎢ yvwatuwidv ᎯᎠ ᎡᎶᎯ
 *[http://www.hbw.com/ibc/ The Internet Bird Collection] - ᎠᏎᏊᎢ ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ videos ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎯᎸᏍᎩ ᏥᏍᏆ
 
-[[Category:Birds|*]]
+[[Category:ᏥᏍᏆ]]
 
 {{Link FA|bg}}
 {{Link FA|no}}
