--- a/ᎤᎵᎾᏫ.mw
+++ b/ᎤᎵᎾᏫ.mw
@@ -142,8 +142,7 @@ See text for families.
 * [http://www.chelonia.org/ Chelonia]: ᎠᏂᏙᎾᎥ ᎠᎴ ᎠᎦᏎᏍᏙᏗ ᎤᎵᎾᏫ.
 * [http://www.chelidae.com Chelidae.com] ᏂᎦᏛ ᎤᎦᎾᏭ ᏴᏩᏁᎬ ᎠᏍᏆᎨᏂ-ᎠᏢᏉᏛ ᎤᎵᎾᏫ
 
-[[Category:Turtles| ]]
-[[Category:Pet reptiles]]
+[[Category:Animalia]]
 
 [[an:Testudines]]
 [[ar:سلحفاة]]
