--- a/ᎦᏍᎩᎶ.mw
+++ b/ᎦᏍᎩᎶ.mw
@@ -112,13 +112,8 @@ Activities Ꮎ ᎠᎴ ᏄᏓᎷᎸᎾ ᎾᏍᏋ ᎪᏢᏅᎯ ᎪᎳᎩ ᏂᎨᏒ
 
 ᎯᎳᎪ ᎢᏳ ᎩᎵᏏ-ᎦᏬᏂᏍᎬ ᏗᏕᎶᏆᏍᎩ ᎦᏬᏂᏍᎬ ᎬᏩᏚᏫᏛ ᎯᎠ ᏭᏚᎸᏛ ᎬᏙᏗ ᎡᎶᎯ ᏥᏄᏍᏗ ᏚᎦᏘᎸᏒ ᎠᏓᏅᏖᏍᎬ, ᎤᎾᏤᎵ ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᎨᏒᎢ ''ᏗᎦᏍᎩᎶ ᎠᎴ ᏗᎦᏍᎩᎶ''.
 
-
-
-
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-{{Wiktionarypar|chair}}
-{{commonscat|Chairs}}
-* [[Bean bag|tuya ᎦᏅᏛᎢ]]
+* [[Bean bag|JᏯ ᎦᏅᏛᎢ]]
 * [[Electric chair|ᎠᎾᎦᎵᏍᎩ ᎦᏍᎩᎶ]] ᎾᏍᎩᎾᎢ ᎠᏓᏃᎯᏎᏗ ᎾᎿ ᏗᎦᏍᎩᎶ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏄᎬᏫᏳᏌᏕᎩ ᎠᏓᎯᏍᏗ.
 * [[History of the chair|ᎧᏃᎮᏍᎩ ᎯᎠ ᎦᏍᎩᎶ]]
 * [[List of chairs|ᏙᎪᏩᎸ ᏗᎦᏍᎩᎶ]] ᎾᏍᎩᎾᎢ ᎧᏁᏉᏛ ᏙᎪᏩᎸ ᏧᏓᎴᏅᏓ ᎦᏍᎩᎶ ᎢᏗᎦᎪᏘ ᎠᎴ ᏗᎪᏢᏅ.
@@ -126,7 +121,7 @@ Activities Ꮎ ᎠᎴ ᏄᏓᎷᎸᎾ ᎾᏍᏋ ᎪᏢᏅᎯ ᎪᎳᎩ ᏂᎨᏒ
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 * [http://www.humanics-es.com/ergonomics.htm#Sitting Ergonomics of sitting postures and seating]
 
-[[Category:Furniture]]
+[[Category:ᎦᎵᏦᏕ ᎠᏅᏗ]]
 
 [[af:Stoel]]
 [[an:Cadiera]]
