--- a/ᎦᏍᎪᏳ.mw
+++ b/ᎦᏍᎪᏳ.mw
@@ -122,11 +122,7 @@
 ==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
 *''ᎯᎠ ᏩᏚᎵᏏ ᎯᎠ ᎡᎶᎯ'', [[C. D. Michener]]  (2000)
 
-[[Category:Hymenoptera]]
-[[Category:Bees| ]]
-[[Category:Pollinators]]
-
-{{Link FA|pl}}
+[[Category:ᏨᏍᎪᏱ]]
 
 <!-- interwiki -->
 
