--- a/ᏌᎶᎵ.mw
+++ b/ᏌᎶᎵ.mw
@@ -120,8 +120,7 @@ agatoli ᏌᎶᎵ ᎠᎴ ᏁᎵᏒ ᎾᎥᎢ ᎢᎦᏛ ᎾᏍᏋ ᏗᏓᎴᎲᏍ
 * [http://www.forestserviceni.gov.uk/environment/red_squirrels/causes_of_decliine.htm Northern Ireland Forest Service - Red Squirrel Action Plan]
 * [http://www.discoverwild.org/squirrels.htm Giant squirrels and flying squirrels of India]
 
-[[Category:Rodents]]
-[[Category:Squirrels]]
+[[Category:Animalia]]
 
 [[ar:سنجاب أحمر]]
 [[az:Adi sincab]]
