--- a/ᎠᏫ.mw
+++ b/ᎠᏫ.mw
@@ -132,14 +132,8 @@
 * [[World Hunting Association|ᎡᎶᎯ ᎠᏂᏃᎯᎵᏙᎲ ᎤᎾᎵᎪᏒ]]
 * [[Hunting|ᎠᏂᏃᎯᎵᏙᎲ]]
 
-
-{{commonscat|Cervidae}}
-
-[[Category:Deer| ]]
-[[Category:Even-toed ungulates]]
-[[Category:Mammals]]
-[[Category:Kashrut food]]
-[[Category:Halaal food]]
+[[Category:Animalia]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[als:Hirsche]]
 [[ar:أيل]]
