--- a/ᎠᏓᎾᏌᏁᏍᎩ.mw
+++ b/ᎠᏓᎾᏌᏁᏍᎩ.mw
@@ -97,9 +97,7 @@
 * [http://www.physorg.com/news85310822.html Alternative theory of gravity explains large structure formation -- without dark matter] [[PhysOrg.com]]
 <!--interwiki-->
 
-[[Category:Gravity]]
-[[Category:Introductory physics]]
-[[Category:Celestial mechanics]]
+[[Category:ᎠᎦᏙᎲᏍᏗ]]
 
 [[af:Swaartekrag]]
 [[als:Gravitation]]
