--- a/ᎤᎶᎩᎳ.mw
+++ b/ᎤᎶᎩᎳ.mw
@@ -162,9 +162,8 @@ Saturn ᎤᏤᎵ ᏒᏃᏱ ᎡᎯ ᏅᏙ [[Titan (moon)|ᎤᏁᎫᏥᏛ]] ᎤᎭ
 * [http://www.wetter-foto.de/galerie.php Cloud photography]
 {{Met_vars}}
 
-[[Category:Weather]]
-[[Category:Clouds|*]]
-[[Category:Climate forcing agents]]
+[[Category:ᎠᎹ]]
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
 
 [[af:Wolk]]
 [[an:Boira]]
