--- a/ᎤᎧᏲᏗ_ᎡᎶᎯᏱ.mw
+++ b/ᎤᎧᏲᏗ_ᎡᎶᎯᏱ.mw
@@ -98,13 +98,11 @@ Significant evaporite ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ 
 * [[List of deserts|ᏙᎪᏩᎸ deserts]]
 * [[List of North American deserts|ᏙᎪᏩᎸ ᎤᏴᏢ ᏴᏩᏁᎬ deserts]]
 
-== External ᏗᏕᎬᏔᏛ ==
+== ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 * [http://www.ucmp.berkeley.edu/glossary/gloss5/biome/deserts.html The desert biome]
 * [http://www.unep.org/geo/gdoutlook/ Global Deserts Outlook]
 
-[[Category:Deserts| ]]
-
-{{Link FA|pt}}
+[[Category:ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ]]
 
 [[af:Woestyn]]
 [[als:Wüste]]
