--- a/ᎠᎺᏉᎯ_ᎤᏁᏍᏓᎳ.mw
+++ b/ᎠᎺᏉᎯ_ᎤᏁᏍᏓᎳ.mw
@@ -96,12 +96,8 @@ __TOC__
 *[http://nsidc.org/sotc/sea_ice.html Global Sea Ice Extent and Concentration: What sensors on satellites are telling us about sea ice]
 *[http://news.bbc.co.uk/2/hi/science/nature/4290340.stm BBC News,  28 September 2005, "Arctic ice 'disappearing quickly'"]
 
-[[Category:Earth phenomena]]
-[[Category:Aquatic ecology]]
-[[Category:Bodies of ice]]
-[[Category:Glaciology]]
-[[Category:Water ice]]
-[[Category:Landforms]]
+[[Category:ᎠᎹ]]
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
 
 [[br:Morskorneg]]
 [[ca:Banquisa]]
