--- a/ᎠᎧᏔᏘ.mw
+++ b/ᎠᎧᏔᏘ.mw
@@ -98,13 +98,7 @@ Catadioptrics (ᏂᎦᎥᏊ ᏩᏎᎸᎯ ᏥᏄᏍᏗ Cassegrains) ᎬᏙᏗ Ꭴ
 * [http://www.chocky.demon.co.uk/oas/diggeshistory.html The Digges telescope of the 1570s]
 * [http://www.solarphysics.kva.se/ The Swedish Solar telescope]
 
-
-
-[[Category:Astronomical imaging]]
-[[Category:Navigation]]
-[[Category:Optical devices]]
-[[Category:Optics]]
-[[Category:Telescopes| ]]
+[[Category:ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ]]
 
 [[als:Teleskop]]
 [[ar:مقراب]]
