--- a/ᎤᏁᏍᏓᎳ.mw
+++ b/ᎤᏁᏍᏓᎳ.mw
@@ -153,10 +153,7 @@ unusual ᏄᏍᏛ ᏗᎧᏃᏗ ᎤᏁᏍᏓᎳ ᎤᏁᏍᏓᎳ ᎾᎾᎢ pressur
 * [http://permanent.access.gpo.gov/websites/armymil/www.crrel.usace.army.mil/techpub/CRREL_Reports/reports/sr96_02.pdf Electromechanical properties of ice]
 <!-- The below are interlanguage links. -->
 
-[[Category:Forms of water]]
-[[Category:Water ice| ]]
-[[Category:Glaciology]]
-[[Category:Minerals]]
+[[Category:ᎠᎹ]]
 
 [[af:Ys]]
 [[als:Eis]]
