--- a/ᎤᎾᏥ.mw
+++ b/ᎤᎾᏥ.mw
@@ -135,8 +135,8 @@ Image:Snowflake 300um LTSEM, 13368.jpg
 * http://www.Ꮝ.caltech.edu/~ᎠᏍᏓᏩᏛᏍᏗ/snowcrystals/ᏗᏟᎶᏍᏔᏅ/ᏗᏟᎶᏍᏔᏅ.htm
 * [http://www.sciencebits.com/SnowAboveFreezing On snow at above freezing temperatures]
 
-[[Category:Snow]]
-[[Category:Weather]]
+[[Category:ᎠᎹ]]
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
 
 [[af:Sneeu]]
 [[an:Nieu]]
