--- a/ᎤᏬᏚ.mw
+++ b/ᎤᏬᏚ.mw
@@ -89,8 +89,7 @@
 <!-- The below are interlanguage links. -->
 -
 
-[[Category:Aesthetics]]
-[[Category:Articles to be merged]]
+[[Category:ᏗᏓᏅᏖᏗ]]
 
 [[als:Schönheit]]
 [[an:Belleza]]
