--- a/ᎨᏯᏔᎯ_ᎬᎾ.mw
+++ b/ᎨᏯᏔᎯ_ᎬᎾ.mw
@@ -81,10 +81,8 @@
 *[http://www.nwtf.org/all_about_turkeys/sounds_of_turkeys.html Sounds Made by Wild Turkeys] - ᎨᏯᏔᎯ ᎬᎾ ᏓᏯᏂ
 *[Happy Thanksgiving http://vlib.iue.it/carrie/texts/carrie_books/paksoy-6/cae22.html]
 
-[[Category:Meleagrididae]]
-[[Category:United States state birds]]
-[[Category:Avifauna of North America|Turkey, Wild ]]
-[[Category:Wildlife of North America]]
+[[Category:ᏥᏍᏆ]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ar:دجاج رومي]]
 [[az:Hind toyuğu]]
