--- a/ᎦᏃᏥ.mw
+++ b/ᎦᏃᏥ.mw
@@ -110,7 +110,7 @@
 * [http://expofergus.com/cowhide-tanning.htm Chromium tanning process]
 * [http://www.leatherpages.com/ Major Leather Industry Resource Site]
 
-[[Category:Leather]]
+[[Category:ᏭᎫᏅᏛ ᏗᎬᏙᏗ]]
 
 [[ar:جلد (منتج)]]
 [[bn:পাকাচামড়া]]
