--- a/ᎠᏬᎭᎵ.mw
+++ b/ᎠᏬᎭᎵ.mw
@@ -162,8 +162,7 @@ Several, see below.<br />
 * [http://www.pbs.org/wnet/nature/eagles/index.html PBS Nature: Eagles]
 * [http://ibc.hbw.com/ibc/phtml/familia.phtml?idFamilia=30 Eagle videos] ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᏥᏍᏆ ᎤᏓᏂᏝᏅ
 
-[[Category:Eagles|*]]
-[[Category:Heraldic birds]]
+[[Category:ᏥᏍᏆ]]
 
 [[af:Arend]]
 [[an:Alica]]
