--- a/ᎫᎴ.mw
+++ b/ᎫᎴ.mw
@@ -53,11 +53,8 @@
 * [http://www.nutritiondata.com/facts-001-02s02dn.html nutrition facts for acorn flour]
 * [http://www.sciencetoymaker.org/acorn/assembl.html How to whistle an acorn]
 
-{{1911}}
-
-[[Category:Fagaceae]]
-[[Category:Edible nuts and seeds]]
-[[Category:Ornaments]]
+[[Category:ᏡᎬ]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ast:Llande]]
 [[bg:Жълъд]]
