--- a/ᎫᎴ.mw
+++ b/ᎫᎴ.mw
@@ -3,11 +3,11 @@
 ᎯᎠ '''ᎫᎴ''' ᎨᏒᎢ ᎯᎠ [[fruit|ᎤᏓᏔᏅ ᎠᎩᏍᏗ]] ᎯᎠ [[oak|ᏧᏍᎦ]] [[ᏡᎬ]] (genera ''Quercus'', ''[[Lithocarpus]]'' ᎠᎴ ''[[Cyclobalanopsis]]'', ᎭᏫᎾᏗᏢ ᎯᎠ ᏏᏓᏁᎸᎯ [[Fagaceae]]). ᎾᏍᎩ ᎨᏒᎢ [[nut (fruit)|ᏐᎯ]], ᎢᎦᎢ ᏕᎨᏒᎢ ᏏᏴᏫ [[seed|ᎤᎦᏔ]] (ᎢᏅᎯ ᎢᏳᏓᎵ ᏔᎵ ᎤᎦᏔ), ᎠᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎦᏁᏔᏯ, ᏄᎵᏂᎬᎬ ᎤᏯᏍᎦ, ᎠᎴ ᏄᎵᎶᎲᏍᎬᎾ ᎭᏫᎾᏗᏢ ᎠᎫᎩᏍᏗ-ᏓᏍᏓᏅᏅ ᏚᎷᏨ [[cupule]]. ᎫᎴ ᏧᏓᎴᎾᎯ ᏂᏛᎴᏅᏓ 1-6 cm ᎦᏅᎯᏓ ᎠᎴ 0.8-4 cm ᎠᏯᏖᎾ. ᎫᎴ ᎠᎩᏍᏗ ᎬᏩᏚᏫᏛ 6 ᎠᎴ 24 ᎢᏯᏅᏓ (ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᎿ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ) ᎤᏩᎾᏒ ᎤᏛᏒ; ᎠᎪᏩᏛᏗ [[List of Quercus species|ᏙᎪᏩᎸ  Quercus ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎾᏍᎩᎾᎢ ᏂᏕᎬᎿᏅᎢ ᏧᏍᎦ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ, ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎫᎴ [[morphology (biology)|ᎤᎾᏙᏢᎯ]] ᎠᎴ [[phenology]] ᎠᎴ ᎤᎵᏍᎨᏛ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ.
 
 ==ᎠᏓᏍᏕᎸᏗ==
-ᎫᎴ ᎠᎴ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ wildlife ᎤᏂᎩᏍᏘ ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ ᎭᏢᏃ ᏧᏍᎦ ᏄᎵᏍᏔᏅ. ᏕᏁᎳᏅᎯ Ꮎ ᎪᏢᏗ ᎫᎴ ᎤᎵᏍᎨᏛ ᎢᎦᏛ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᏠᏯᏍᏛ [[bird|ᏥᏍᏆ]]ᏯᏛᎿ ᏥᏄᏍᏗ [[jay|ᏜᏴᎦ]], [[pigeon|ᏬᏱ]], ᎢᎦᏛ [[duck|ᎧᏬᏄ]]ᎠᎴ ᎯᎸᏍᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[woodpecker|ᎫᎫᏣ]]. ᎤᏍᏗ [[mammal|gantlai]]Ꮎ ᎨᎳᏍᏙᏗ ᎾᎿ ᎫᎴ ᎠᏠᏯᏍᏛ [[mouse|ᏥᏍᏕᏥ]], [[squirrel|ᏌᎶᎵ]]ᎠᎴ ᎯᎸᏍᎩ ᏐᎢ [[rodent]]. ᎡᏆ ᎦᎾᏝᎢ ᏯᏛᎿ ᏥᏄᏍᏗ [[pig|ᎠᏛ ᏏᏆ]], [[bear|ᎠᎵᏐᏆᎸᏗ]]ᎠᎴ [[deer|ᎠᏫ ᎢᎾᎨ ᎡᎯ]] ᎾᏍᎩ ᎾᏍᏇ ᎤᏲᏨᎯ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᎫᎴ; ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎦᎸᎳᏗᏢ 25% ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎠᏫ ᎢᎾᎨ ᎡᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎯᎠ ᎡᏆ ᏧᏍᎦ ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ southwest [[ᏩᎳᏛ]], ᎠᏛ ᏏᏆ ᎠᎴ ᏙᎢ ᎤᎦᏔᎲᏒ ᏗᏲᏒᎯ ᎭᏫᎾᏗᏢ ᏧᏍᎦ ᎸᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ, kalil ᎠᎴ ᎦᎵᏦᏙᏗ ᎤᏅᏌ ᎾᎿ ᎫᎴ. ᏱᏂᎬᏛᎾ, ᎫᎴ ᎠᎴ ᎠᏓᎯᎯ ᎢᎦᏛ ᏐᎢ ᎡᎿᎢ ᎡᎥ, ᏯᏛᎿ ᏥᏄᏍᏗ [[horse|ᏐᏈᎵ]].
+ᎫᎴ ᎠᎴ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ wildlife ᎤᏂᎩᏍᏘ ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ ᎭᏢᏃ ᏧᏍᎦ ᏄᎵᏍᏔᏅ. ᏕᏁᎳᏅᎯ Ꮎ ᎪᏢᏗ ᎫᎴ ᎤᎵᏍᎨᏛ ᎢᎦᏛ ᎤᎾᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᏠᏯᏍᏛ [[bird|ᏥᏍᏆ]]ᏯᏛᎿ ᏥᏄᏍᏗ [[ᏜᏴᎦ]], [[ᏬᏱ]], ᎢᎦᏛ [[ᎧᏬᏄ]]ᎠᎴ ᎯᎸᏍᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[ᎫᎫᏣ]]. ᎤᏍᏗ [[mammal|gantlai]] Ꮎ ᎨᎳᏍᏙᏗ ᎾᎿ ᎫᎴ ᎠᏠᏯᏍᏛ [[ᏥᏍᏕᏥ]], [[ᏌᎶᎵ]] ᎠᎴ ᎯᎸᏍᎩ ᏐᎢ [[rodent]]. ᎡᏆ ᎦᎾᏝᎢ ᏯᏛᎿ ᏥᏄᏍᏗ [[ᎠᏛ ᏏᏆ]], [[ᎠᎵᏐᏆᎸᏗ]]ᎠᎴ [[deer|ᎠᏫ ᎢᎾᎨ ᎡᎯ]] ᎾᏍᎩ ᎾᏍᏇ ᎤᏲᏨᎯ ᎡᏆ ᎢᎦᎢ ᎨᏒ ᎫᎴ; ᎤᏅᏌ ᎠᎾᏍᎬᏘ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎦᎸᎳᏗᏢ 25% ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎠᏫ ᎢᎾᎨ ᎡᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎯᎠ ᎡᏆ ᏧᏍᎦ ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ southwest [[ᏳᎳᏛ]], ᎠᏛ ᏏᏆ ᎠᎴ ᏙᎢ ᎤᎦᏔᎲᏒ ᏗᏲᏒᎯ ᎭᏫᎾᏗᏢ ᏧᏍᎦ ᎸᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ, kalil ᎠᎴ ᎦᎵᏦᏙᏗ ᎤᏅᏌ ᎾᎿ ᎫᎴ. ᏱᏂᎬᏛᎾ, ᎫᎴ ᎠᎴ ᎠᏓᎯᎯ ᎢᎦᏛ ᏐᎢ ᎡᎿᎢ ᎡᎥ, ᏯᏛᎿ ᏥᏄᏍᏗ [[ᏐᏈᎵ]].
 
 ᎭᏫᎾᏗᏢ ᎢᎦᏛ [[ᎠᏂᏴᏫ]] ᎥᎦᏔᎲᎢ, ᎫᎴ ᏌᏊ ᎢᏳᏩᎫᏗ constituted ᎠᎵᏍᏓᏴᏗ ᏕᎬᏔᏛ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎤᏅᏌ ᎠᎴ ᎾᏊ ᏂᎦᎥᏊ ᎾᏍᎩ ᎤᏩᏒ ᎤᏙᎯᏳ ᎠᏲᎵ ᎠᎵᏍᏓᏴᏗ.
 
-ᎯᎠ [[larva|ᎠᏲᎵ]]e ᎢᎦᏛ [[moth|ᏩᏐᎳ]]ᎠᎴ [[weevil]]ᎾᏍᎩ ᎾᏍᏇ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏲᎵ ᎫᎴ, ᎤᏦᎠᏎᏗ ᎯᎠ ᏚᎷᏍᏘ ᏥᏄᏍᏗ ᎤᏅᏌ ᎤᏙᎷᏬᏗ. 
+ᎯᎠ [[ᎠᏲᎵ]]e ᎢᎦᏛ [[ᏩᏐᎳ]] ᎠᎴ [[weevil]] ᎾᏍᎩ ᎾᏍᏇ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏲᎵ ᎫᎴ, ᎤᏦᎠᏎᏗ ᎯᎠ ᏚᎷᏍᏘ ᏥᏄᏍᏗ ᎤᏅᏌ ᎤᏙᎷᏬᏗ. 
 
 ᎫᎴ ᎠᎴ ᎤᎵᎶᎯ ᎡᎿᎢ ᎡᎥ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᎠᎴ ᎡᏆ ᎠᎴ ᎯᎠ ᎢᏴ ᎠᏏᎾᏍᏛ consumed ᎠᎴ cached. ᎫᎴ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᏪᎾᎢ ᎭᏫᎾᏗᏢ nutrients. ᏎᏍᏗ ᏧᏓᎴᎾᎯ ᏂᏛᎴᏅᏓ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᎴ ᏂᎦᏛ ᎫᎴ ᎢᎦᎢ ᎨᏒ ᎡᏆ ᎢᎦᎢ ᎨᏒ [[protein|ᏤᎵ]], [[carbohydrate]]ᎠᎴ ᎦᎵᏦᎯᏓ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎯᎠ ᎪᎢ [[calcium]], [[phosphorus|ᎠᏨᏍᏛ]] ᎠᎴ [[potassium]], ᎠᎴ ᎯᎠ [[vitamin]] [[niacin]]. ᏂᎦᏛ ᎦᏟᏌᏅ [[food energy|ᎠᎵᏍᏓᏴᏗ ᏄᎵᏂᎬᎬ]] ᎭᏫᎾᏗᏢ ᎫᎴ ᎾᏍᎩ ᎾᏍᏇ varies ᎾᎥᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᎴ ᏂᎦᏛ ᎤᏠᏱ ᎢᎬᏁᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᎬᏙᏗ ᏐᎢ ᎨᏯᏔᎯ ᎤᏂᎩᏍᏘ ᎠᎴ ᎬᏙᏗ ᏐᎢ ᎣᏍᏛ. 
 
