--- a/ᎠᎺᏉᎯ.mw
+++ b/ᎠᎺᏉᎯ.mw
@@ -104,12 +104,10 @@ Matthias Tomczak ᎠᎴ J. Stuart Godfrey. 2003. ''ᎤᏔᏂᏗ ᎦᏙᎯ Oceano
 * [http://oceans.greenpeace.org Greenpeace Defending our Oceans]
 * [http://www.oceanvoyager.org Ocean Voyager], ᎯᏍᎩ-ᎢᎦᏛ ᎥᎢᏒᎢ ᎠᎯᏯᏍᏗ ᎯᎠ ᎠᎺᏉᎯ, ᎪᏢᏅᎯ ᎾᎥᎢ ᎤᏂᏥ Jones ᎪᏪᎵ ᏗᎪᎵᏰᏗ
 * [http://www.oceanconservancy.org/ The Ocean Conservancy] - ᎦᏂᎳᏗᏍᏗ ᎾᏍᎩᎾᎢ ᎨᏯᏔᎯ, nvwatohiyadv ᎠᎺᏉᎯ
-* [http://dapper.pmel.noaa.gov/dchart Ocean Data on-line]
+* [http://dapper.pmel.noaa.gov/dchart Ocean Data online]
 
-[[Category:Bodies of water|Oceans]]
-[[Category:Oceans| ]]
-[[Category:Oceanography|Oceans]]
-[[Category:Sustainability|Oceans]]
+[[Category:ᎠᎹ]]
+[[Category:ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ]]
 
 [[an:Ocián]]
 [[ar:محيط (جغرافيا)]]
