--- a/ᎤᏪᏴᎢ.mw
+++ b/ᎤᏪᏴᎢ.mw
@@ -86,9 +86,8 @@
 * [[Ocean|ᎠᎺᏉᎯ]]
 * [[Swamp|ᎠᎹᏳᎸᏗ ᏌᎷᏱ]]
 
-[[Category:Water streams| ]]
-[[Category:Rivers|Stream]]
-[[Category:Hydrology]]
+[[Category:ᎠᎹ]]
+[[Category:ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ]]
 
 [[als:Bach]]
 [[an:Rigachuelo]]
