--- a/ᎤᎦᏔ.mw
+++ b/ᎤᎦᏔ.mw
@@ -89,14 +89,8 @@
 
 {{Commons|Linum usitatissimum}}
 
-[[Category:Biofuels]]
-[[Category:Biodegradable materials]]
-[[Category:Fiber plants]]
-[[Category:Fibers]]
-[[Category:Linaceae]]
-[[Category:Medicinal herbs and fungi]]
-[[Category:Painting materials]]
-[[Category:Underutilized crops]]
+[[Category:Plantae]]
+[[Category:ᏭᎫᏅᏛ ᏗᎬᏙᏗ]]
 
 [[bg:Културен лен]]
 [[ca:Lli]]
