--- a/ᎠᎹᏳᎸᏗ.mw
+++ b/ᎠᎹᏳᎸᏗ.mw
@@ -98,13 +98,12 @@
 * [[Côte d'Azur]], ᎯᎠ ᎠᎦᎸᏥ Riviera [[France]] 
 * [[Adriatic Coast|Adriatic ᎠᎹᏳᎸᏗ]] [[Croatia]] ᎠᎴ neighbouring ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ
 * ᎯᎠ [[Alaska North Slope|ᎤᏴᏢ ᎠᎷᏚᎧᏘ]] ᎦᏙᎯ [[Alaska]]
-* [[Byron Bay, Australia|Byron ᎥᏓᎵ, Australia]]
+* [[Byron Bay, Australia|Byron ᎥᏓᎵ, ᏏᎳᏗᏝ]]
 
-== ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 * [http://www.ukcoastguide.co.uk/ UK Coast Guide]
 
-[[Category:Landforms]]
-[[Category:Coastal geography]]
+[[Category:ᎦᏙᎯ ᏄᏍᏗᏓᏅ]]
 
 [[af:Kuslyn]]
 [[an:Costa]]
