--- a/ᎠᎦᏍᎬ.mw
+++ b/ᎠᎦᏍᎬ.mw
@@ -59,7 +59,8 @@ Cultural ᏄᏍᏛ ᎣᏓᏅᏛ ᏫᏂᏚᏳᎪᏛ ᎠᎦᏍᎬ ᏚᏓᎴᎿᎥ 
 
 <!-- interwiki links begin here -->
 
-[[Category:Precipitation]]
+[[Category:ᎠᎹ]]
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
 
 [[af:Reën]]
 [[an:Plevia]]
