+ᎤᎾᏓᏟᏌᎲ, translating continents

--- a/ᎣᏓᎸᎢ.mw
+++ b/ᎣᏓᎸᎢ.mw
@@ -1,9 +1,7 @@
-[[File:Denali Mt McKinley.jpg|350px|thumb|[[Mount McKinley|ᎠᎩᎶᎯᏍᏗ McKinley]] (Denali) ᎭᏫᎾᏗᏢ [[Alaska]] ([[United States|USA]]) ᎤᎭ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎬᎪᏩᏛᏗ ᎠᎴᏅᏗalenvdidsv--summit elevation ᏧᏓᎴᎿᎢ ᎾᎿ [[Earth|ᎡᎶᎯ]].]]
-{{otheruses}}
+[[File:Denali Mt McKinley.jpg|350px|thumb|[[Mount McKinley|ᎠᎩᎶᎯᏍᏗ McKinley]] (Denali) ᎭᏫᎾᏗᏢ [[Alaska]] ([[ᎠᎹᏰᎵ]]) ᎤᎭ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎬᎪᏩᏛᏗ ᎠᎴᏅᏗalenvdidsv--summit elevation ᏧᏓᎴᎿᎢ ᎾᎿ [[Earth|ᎡᎶᎯ]].]]
 '''ᎣᏓᎸ''' ᎨᏒᎢ [[landform]] Ꮎ extends ᎦᎸᎳᏗᏢ ᎯᎠ ᏓᎦdagatuwisdisgv [[terrain]] ᎭᏫᎾᏗᏢ ᏩᏎᎸᎯ ᎡᏍᎦᏂ.  ᎣᏓᎸ ᎨᏒᎢ ᏂᎦᎥᏊ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᎴ steeper ᎬᎾᏬᏍᎬ '''[[hill|ᎦᏚᏏ]]''', ᎠᎴ ᎾᎿᎢ ᎨᏒᎢ ᎤᎪᏗ overlap, ᎠᎴ usage ᎢᏳᏓᎵᎭ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎾᎥᎢ ᏄᏍᏛ ᎢᏯᏛᏁᏗ. ᎢᎦᏛ ᏚᎾᎳᏏᏛ ᎧᏁᎢᏍᏔᏅᎯ ᎣᏓᎸ ᏥᏄᏍᏗ ᏫᎪᏍᏓᏴ ᎬᏙᏗ [[topographic prominence]] ᎦᏬᎯᎸᏙᏗ ᎧᏁᎢᏍᏔᏅᎯ ᏧᎬᏩᎶᏗ: ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ''[[Encyclopædia Britannica]]'' ᎧᏁᎦ ᎢᏯᏛᏁᏗ prominence 610 [[metre|m]] (2,000 [[foot (unit of length)|ft]]).
 
-ᏙᏓᎸ ᎫᏢᏗ 52% Asia, 36% ᎤᏴᏢ ᎠᎺᎵᎨ, 25% Europe, 22% ᎤᎦᎾᏭ ᎠᎺᎵᎨ, 17% Australia, ᎠᎴ 3% Africa. ᏥᏄᏍᏗ ᏂᎦᏛ, 24% ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎦᏙᎯ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎨᏒᎢ mountainous. ᎾᏍᎩ ᎾᏍᏇ, 1 ᎭᏫᎾᏗᏢ 10 ᏴᏫ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ mountainous regions. ᏂᎦᏛ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ rivers ᎠᎴ ᎨᎶᎸᎯ ᏂᏛᎴᏅᏓ ᎣᏓᎸ ᏙᏧᏓᎴᏅ, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎠᏰᎵ ᎢᏴ ᏴᏫ ᎠᏁᎲ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᏙᏓᎸ ᎾᏍᎩᎾᎢ ᎠᎹ. [http://72.14.203.104/search?q=cache:mrpECr4ad8UJ:animana.org/tab2/22troubleattop.shtml+&hl=en&lr=lang_en]
-<!-- Google cache for the dead link http://www.animana.org/tab2/22troubleattop.shtml -->
+ᏙᏓᎸ ᎫᏢᏗ 52% ᏓᎶᏂᏰᏍᏏ, 36% ᎤᏴᏢ ᎠᎺᎵᎨ, 25% ᏳᎳᏛ, 22% ᎤᎦᎾᏭ ᎠᎺᎵᎨ, 17% ᏏᎳᏗᏝ, ᎠᎴ 3% ᎬᎿᎨᏍᏛ. ᏥᏄᏍᏗ ᏂᎦᏛ, 24% ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎦᏙᎯ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎨᏒᎢ mountainous. ᎾᏍᎩ ᎾᏍᏇ, 1 ᎭᏫᎾᏗᏢ 10 ᏴᏫ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ mountainous regions. ᏂᎦᏛ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ rivers ᎠᎴ ᎨᎶᎸᎯ ᏂᏛᎴᏅᏓ ᎣᏓᎸ ᏙᏧᏓᎴᏅ, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎠᏰᎵ ᎢᏴ ᏴᏫ ᎠᏁᎲ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᏙᏓᎸ ᎾᏍᎩᎾᎢ ᎠᎹ. [http://72.14.203.104/search?q=cache:mrpECr4ad8UJ:animana.org/tab2/22troubleattop.shtml+&hl=en&lr=lang_en]
 
 ᎯᎠ adjective '''montane''' ᎨᏒᎢ ᎬᏔᏅᎯ ᏄᏍᏛ ᎧᏃᎮᏗ mountainous areas ᎠᎴ ᎯᎠ ᏧᏓᎴᏅᏓ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎠᏂ.
 
