--- a/ᎭᏫᎾᏗᏢ_ᏗᏎᏍᏗ_ᎤᎬᏩᎵ.mw
+++ b/ᎭᏫᎾᏗᏢ_ᏗᏎᏍᏗ_ᎤᎬᏩᎵ.mw
@@ -97,16 +97,14 @@ x - x_3 & y - y_3 & z - z_3
 ᏅᎪᏢᎯᏐᏗᏱ, ᎯᎠ ᎦᏃᎯᎵᏙ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎠᏓᏁᎸ ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᏗ ᎾᏍᎩ ᏂᎪᎯᎸ ᏗᎦᏘᎴᎩ ᏄᏍᏛ ᎧᏃᎮᏗ ᎠᏗᏌᏓᏗᏍᏗ ᎠᎾᏓᏁᎲ ᎯᎠ [[Hyperbolic geometry|hyperbolic ᎦᏃᎯᎵᏙ]]. ᎯᎠ ᎣᏂᏯᎨ ᎤᏝᏅᏓᏕᎲ ᎠᏩᏛᏓ ᎠᏔᏲᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎪᎷᏩᏛᏗ [[special relativity|ᎤᏤᎵᏛ relativity]] ᎭᏫᎾᏗᏢ ᎯᎠ simplified ᎦᎸᏛ ᎧᏁᏌᎢ ᎭᏢᏃ ᎾᎿᎢ ᎨᏒᎢ ᏌᏊ ᏂᎦᏅᎯᏒ ᎤᏜᏅᏛ ᎠᎴ ᏌᏊ iyuwakodi.
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-
 * [[Half-plane|ᎠᏰᎵ ᎢᏴ-ᎦᏃᎯᎵᏙ]]
 * [[Hyperplane]]
 * [[Line-plane intersection|ᎠᏍᏓᏅᏅ-ᎦᏃᎯᎵᏙ ᏗᎦᎾᏗᏫᏍᏗ]]
 
-== ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 * [http://mathworld.wolfram.com/Plane.html Mathworld: Plane]
 
-[[Category:Euclidean geometry|*]]
-[[Category:Surfaces]]
+[[Category:ᏗᏎᏍᏗ ᎤᎬᏩᎵ]]
 
 [[af:Vlak]]
 [[als:Ebene (Mathematik)]]
