--- a/ᏓᏬᎵ.mw
+++ b/ᏓᏬᎵ.mw
@@ -1,5 +1,4 @@
-[[Image:TallMushroom.jpg|thumb|right|150px|ᎯᎠ ᎦᏃᏢᏥᏙᎯ ᏂᏕᎬᎢ  ᎯᎠ ᎠᎵᏍᏚᎶ ᎠᎴ ᎯᎠ Pileus ᏧᏓᎴᎾᎯ ᏂᎬᎢ.]]
-
+[[File:Mushrooms ml.jpg|thumb|200px|''Boletus edulis'']]
 '''ᏓᏬᎵ''' ᎨᏒᎢ ᎦᎸᎳᏗᏢ-ᎦᏙᎯ [[fruiting body|ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᏰᎸ]] (Ꮎ ᎨᏒᎢ, [[spore|ᏓᏪᎳᎩᏍᎩ]]-ᎠᏛᎯᏍᏗᏍᎬ ᎠᏛᎯᏍᏙᏗ) [[fungus|ᏂᎯ]], ᎤᎲᎢ ᎤᏒᏙᏂ ᎠᎴ ᎠᎵᏍᏚᎶ. ᎾᎥᎢ ᎧᏁᏉᎥᎢ, ᎾᏍᎩ ᏫᏚᏳᎪᏛ ᎯᎠ ᏂᎦᏛ ᏂᎯ ᎠᏛᎯᏍᏗᏍᎬ ᎯᎠ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᏰᎸ ᏯᏛᎿ ᎦᎾᏄᎪᏨᎢ, ᎯᎠ ᎠᎴᏅᏔᏅ ᎤᏠᏯᏍᏛ ᏓᎧᏁᎲ (ᎤᏯᏅᎲ ᎯᎠ '''[[mycelium]]''') ᏕᎬᏔᏛ ᎠᎴ '''''[[hypha]]e'''''. ᎭᏫᎾᏗᏢ ᎤᏣᏘ broader ᎤᏓᏅᏖᏗ, ''ᏓᏬᎵ'' ᎨᏒᎢ ᎢᎬᎾᏔᏅᎯ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎬᎪᏩᏛᏗ ᏂᎯ, ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᏰᎸ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏂᎯ, ᎬᏙᏗ ᎯᎠ mycelium ᎤᏠᏱᎭ ᎠᎴᏂᏙᎲ ᎬᏍᎦᎸ ᎭᏫᎾᏗᏢ ᎤᏯᎸ, ᎦᏙᎯ, ᎤᎪᏏᏛ ᎠᏓ, ᏧᎦᎶᎦ, ᎠᎴ ᎤᏠᏯᏍᏗ. ᏓᏬᎵ ᎣᏤᎵ ᎢᎬᏁᎯ ᎠᎵᏍᏓᏴᏗ ᏗᎬᏩᎶᏒ ᎠᎽᏰᎵ. ᎯᎠ ᎤᏦᏍᏗ ᏂᎬᎿᏅ ᎠᎴᏂᏍᎬ ᎾᏍᎩᎾᎢ ᎯᎠ ᏓᏪᎳᎩᏍᎩ-ᎠᏛᎯᏍᏗᏍᎬ ᎠᏛᎯᏍᏙᏗ "ᎤᏙᎯᏳ" ᏓᏬᎵ ᎨᏒᎢ ᎯᎠ '''''basidiocarp'''''. ᎯᎠ ᎠᎴᏂᏍᎬ "'''ᏚᏩᎷ'''" ᎨᏒᎢ ᎬᏔᏅᎯ ᎢᏯᏛᏁᎵᏓᏍᏗ ᏫᏚᏳᎪᏛ basidiocarp Ꮎ ᎨᏒᎢ ᏗᏄᏬ ᏗᎦᏛᏗ ᎠᎩᏍᏗ.
 
 == ᎢᏗᎦᎪᏘ ᏓᏬᎵ ==
@@ -73,7 +72,8 @@ Image:Diminute_mushrooms.JPG|Diminute mushrooms.
 * ''Psilocybin ᏓᏬᎵ ᎥᎢᏒᎢ: ᏩᎾᎯᎨᏍᏙᏗ ᎦᎵᏦᏗ ᎭᏫᎾᏗᏢ ᎠᎴ ᏙᏯᏗᏢ ᏗᎦᎶᎪᏗ'' (2004) ISBN 0-932551-64-5
 * ''Psilocybin ᏓᏬᎵ ᎯᎠ ᎡᎶᎯ'' (1996) ISBN 0-89815-839-7
 
-[[Category:Mushrooms|*]]
+[[Category:ᎥᎴᏂᏙᎲ]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[an:Potrecón]]
 [[bs:Gljive]]
