--- a/ᎪᏛᏅ.mw
+++ b/ᎪᏛᏅ.mw
@@ -80,11 +80,8 @@
 <references/>
 </div>
 
-[[Category:Crayfish]]
-[[Category:Edible crustaceans]]
-[[Category:Swedish cuisine]]
-[[Category:Louisiana cuisine]]
-[[Category:Seafood]]
+[[Category:Animalia]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ca:Astacideu]]
 [[de:Großkrebse]]
