--- a/ᎤᎫᎾ.mw
+++ b/ᎤᎫᎾ.mw
@@ -86,7 +86,7 @@
 * [http://www.UWBadgers.com/ Official Athletic Department Site for the University of Wisconsin "Badgers"]
 * [http://www.aigas.co.uk/Badger-Ecology-g.asp Aigas Field Centre badger ecology page]
 
-[[Category:Badgers| ]]
+[[Category:Animalia]]
 
 [[an:Texudo]]
 [[ast:Melandru]]
